整理工厂模式

--- a/BookNote/设计模式之禅/第4章-接口隔离原则.md
+++ b/BookNote/设计模式之禅/第4章-接口隔离原则.md
@@ -3,18 +3,45 @@
 ## 4.1 接口隔离原则的定义
 　　接口分为两种：
 
-1. 实例接口（Object Interface），在 Java 中声明一个类，然后用 new 关键字产生一个实例，它是对一个类型的事物的描述。这是一个接口。`Person zhangSan  = new Person()`，Person 类就是 zhangSan 的接口。Java 中类也是一种接口。
+1. **实例接口**（Object Interface），在 Java 中声明一个类，然后用 new 关键字产生一个实例，它是对一个类型的事物的描述。这是一个接口。`Person zhangSan  = new Person()`，Person 类就是 zhangSan 的接口。Java 中类也是一种接口。
 
-2. 类接口（Class Interface），Java 中经常使用的 interface 关键字定义的接口。
+2. **类接口**（Class Interface），Java 中经常使用的 interface 关键字定义的接口。
 
-　　隔离：建立单一接口，不要建立臃肿庞大的接口。通俗讲就是：接口尽量细化，同时接口中的方法尽量少。
+　　**隔离**：建立单一接口，不要建立臃肿庞大的接口。通俗讲就是：接口尽量细化，同时接口中的方法尽量少。
 
 　　接口隔离原则与单一职责的不同：接口隔离原则与单一职责的审视角度不相同，单一职责要求的是类和接口职责单一，注重的是职责，这是业务逻辑上的划分，而接口隔离原则要求接口的方法尽量少。
 
 ## 4.2 美女何其多，观点各不同
 
+　　依赖多个专用的接口比依赖一个综合的接口要灵活。
+
+　　接口时设计时对外提供的契约，通过分散定义多个接口，可以预防未来变更的扩散，提高系统的灵活性和可维护性。
 
 ## 4.3 保证接口的纯洁性
+
+　　接口隔离原则是对接口进行规范约束，其包含以下 4 层含义：
+
+* 接口要尽量小
+
+　　“ 小 ” 是有限度的，首先就是不能违反单一职责原则。
+
+　　根据接口隔离原则拆分接口时，首先必须满足单一职责原则。
+
+* 接口要高内聚
+
+　　高内聚：提高接口、类、模块的处理能力，减少对外的交互。
+
+　　具体到接口隔离原则就是，要求在接口中尽量少公布 public 方法，接口是对外的承诺，承诺越少对系统的开发越有利，变更的分先也就越少，同时也有利于降低成本。
+
+* 定制服务
+
+　　一个系统或系统内的模块之间必然会有耦合，有耦合就要有相互访问的接口（并不一定就是 Java 中定义的 Interface，也可能是一个类或单纯的数据交互），在设计时就需要为每个访问者（即客户端）定制服务。
+
+　　定制服务：单独为一个个体提供优良的服务。
+
+　　在做系统设计时也需要考虑对系统之间或模块之间的接口采用定制服务。采用定制服务就必然有一个要求：只提供访问者需要的方法。
+
+* 接口设计是有限度的
 
 
 
