设计模式之禅第4章读书笔记

--- a/BookNote/设计模式之禅/第4章-接口隔离原则.md
+++ b/BookNote/设计模式之禅/第4章-接口隔离原则.md
@@ -43,7 +43,20 @@
 
 * 接口设计是有限度的
 
-
+  接口的设计粒度越小，系统越灵活。但是，灵活的同时也带来了结构的复杂化，开发难度增加，可维护性降低，这不是一个项目或产品所期望看到的，所以接口设计一定要注意适度，这个 “ 度 ” 如何来判断呢？根据经验和常识判断，没有一个固化或可测量的标准。
 
 ## 4.4  最佳实践
 
+​	接口隔离原则是对接口的定义，同时也是对类的定义，接口和类尽量使用原子接口或原子类组装。
+
+​	划分原子的几个规则：
+
+* 一个接口只服务于一个子模块或业务逻辑
+
+* 通过业务逻辑压缩接口中的 public 方法，将接口方法简化。
+
+* 已经被污染了的接口，尽量去修改，若变更的风险较大，则采用适配器模式进行转化处理。
+
+  了解环境，拒绝盲从。环境不同，接口拆分的标准就不同。别照抄。
+
+  怎么准确地实践接口隔离原则？实践、经验和领悟！
