整理anr知识，补充设计模式之禅第5章，添加总结

--- a/Android/optimize/性能优化.md
+++ b/Android/optimize/性能优化.md
@@ -1,8 +1,15 @@
 # 性能优化
 
-　　性能优化有几个方面：一、内存优化；二、UI 优化（布局优化和绘制优化）；三、速度的优化（线程优化/网络优化）；四、电量优化；五、启动优化。
+　　性能优化有几个方面：
 
-## 内存优化
+1. 内存优化
+
+2. UI 优化（布局优化和绘制优化）
+3. 速度的优化（线程优化/网络优化）
+4. 电量优化
+5. 启动优化
+
+## 1. 内存优化
 　　什么是内存泄漏？内存不在 GC 的掌控范围之内了。那么 java 的 GC 内存回收机制是什么？某对象不再有任何引用的时候才会进行回收。
 ![](./GC.png)
 　　当向上寻找，一直寻找到 GC Root 的时候，此对象不会进行会回收；如果数据在整个页面或整个项目都没有引导，则这个对象会被 GC 掉。
@@ -39,7 +46,7 @@
 > 3.内存优化
 
 
-## UI 优化
+## 2. UI 优化
 　　UI 优化主要包括布局优化以及 view 的绘制优化。
 
 　　什么情况会导致卡顿？一般是如下几种情况：
@@ -144,7 +151,7 @@
 9. onDraw 方法中不要做耗时的任务
 
 
-## 网络优化
+## 3. 网络优化
 　　可以通过 Memory 下面的 Net 进行网络的监听。
 
 #### ANR 问题
@@ -178,7 +185,7 @@
 
 　　刷新数据时，尽可能使用局部刷新，而不是全局刷新。第一、界面会闪屏一下，网差的界面直接白屏一段时间也不是不可能；第二，流量的使用，很浪费。
 
-## 启动优化
+## 4. 启动优化
 　　众所周知，一个好的产品，除了功能强大，好的性能也必不可少。有调查显示，近 50% 的受访者因为 apk 太大而拒绝使用，近 40% 的受访者会因为 App 性能差而卸载，性能也是造成 App 用户沮丧的头号原因。
 
 　　安卓应用的启动方式分为三种：冷启动、暖启动、热启动，不同的启动方式决定了应用 UI 对用户可见所需要花费的时间长短。顾名思义，冷启动消耗的时间最长。基于冷启动方式的优化工作也是最考验产品用户体验的地方。
@@ -217,7 +224,7 @@
 * Application 的创建过程中尽量少的进行耗时操作。
 * 减少布局的层次，并且生命周期回调的方法中尽量减少耗时的操作。
 
-## 电量优化
+## 5. 电量优化
 
 #### 耗电概念
 　　众所周知，音乐和视频其实是耗电量最大的。如果用户一旦发现应用非常耗电，大多数就会选择卸载来解决此类问题。
