--- a/BookNote/设计模式之禅/第5章-迪米特法则.md
+++ b/BookNote/设计模式之禅/第5章-迪米特法则.md
@@ -17,10 +17,22 @@
 
 2. 朋友之间也是有距离的
 
+   ​	一个累公开的 publish 属性或方法越多，修改时涉及的面也就越大，变更引起的风险扩散也就越大，因此，为了保持朋友间的距离，在设计时需要反复衡量：是否还可以再减少 publish 方法和属性，是否可以修改为 private、package-private（包类型，在类、方法、变量前不加访问权限，则默认为包类型）、protected 等访问权限，是否可以加上 final 关键字等。
 
+   尽量不要对外公开太多的 publish 方法和非静态的 public 变量，尽量内敛，多食用 private 、package-private 、protected 等访问权限。
 
+3. 是自己的就是自己的
 
+   如果一个方法放在本类中，既不增加类间关系，也对本类不产生负面影响，那就放置在被类中。
 
+4. 谨慎使用 Serializable
 
+   这个问题很少出现，即使出现也会立即发现并得到解决。
+
+   在项目中使用 RMI（Remote Method Invocation，远程方法调用）方式传递一个 VO（Value Object，值对象），这个对象就必须实现 Serializable 接口，也就是把需要网络传输的对象进行序列化，否则就会出现 NoSerializableException 异常。如果客户端的 VO 修改了一个属性的访问权限，从 private 变更为 public ，访问的权限扩大了，如果服务器上没有做出相应的变更，就会报序列化失败。
 
 ## 5.3 最佳实践
+
+​		迪米特法则的核心观念就是类间解耦，弱耦合，只有弱耦合了以后，类的复用率才可以提高。其要求的结果就是产生了大量的中转或跳转类，导致系统的复杂性提高，同时也为维护带来了难度。
+
+​		在采用迪米特法则时需要反复权衡，即做到让结构清晰，又做到高内聚低耦合。
