更新readme,增加设计模式之禅第6章知识

--- a/BookNote/设计模式之禅/第5章-迪米特法则.md
+++ b/BookNote/设计模式之禅/第5章-迪米特法则.md
@@ -5,7 +5,7 @@
 
 ## 5.2 我的知识你知道得越少越好
 
-​	迪米特法则对类地低耦合提出了明确地要求，其包含以下 4 层含义。
+　　迪米特法则对类地低耦合提出了明确地要求，其包含以下 4 层含义。
 
 1. 只和朋友交流。
 
@@ -33,6 +33,6 @@
 
 ## 5.3 最佳实践
 
-​		迪米特法则的核心观念就是类间解耦，弱耦合，只有弱耦合了以后，类的复用率才可以提高。其要求的结果就是产生了大量的中转或跳转类，导致系统的复杂性提高，同时也为维护带来了难度。
+　　迪米特法则的核心观念就是类间解耦，弱耦合，只有弱耦合了以后，类的复用率才可以提高。其要求的结果就是产生了大量的中转或跳转类，导致系统的复杂性提高，同时也为维护带来了难度。
 
-​		在采用迪米特法则时需要反复权衡，即做到让结构清晰，又做到高内聚低耦合。
+　　在采用迪米特法则时需要反复权衡，即做到让结构清晰，又做到高内聚低耦合。
