--- a/BookNote/设计模式之禅/第6章-开闭原则.md
+++ b/BookNote/设计模式之禅/第6章-开闭原则.md
@@ -1,10 +1,34 @@
 # 第 6 章 开闭原则
 
 ## 6.1 开闭原则的定义
-　　开闭原则
+　　开闭原则的定义：
+
+　　Software entities like classes,modules and function should be open for extension but closed for modifications.
+
+　　一个软件实体如类、模块和函数应该对扩展开放，对修改关闭。 
 
 ## 6.2 开闭原则的庐山真面目
 
+　　软件实体应该对扩展开放，对修改关闭，其含义是说一个软件实体应该通过扩展来实现变化，而不是通过修改已有的代码来实现变化。
+
+　　软件实体包括以下几个部分：
+
+* 项目或软件产品中按照一定的逻辑规则划分的模块。
+* 抽象和类。
+* 方法。
+
+　　一个软件产品只要在生命期内，变化是必然的，所以我们就应该在设计时尽量适应这些变化，以提高项目的稳定性和灵活性，真正实现 “ 拥抱变化 ”。
+
+　　开闭原则告诉我们应尽量通过扩展软件实体的行为来实现变化，而不是通过修改已有的代码来完成变化，它是为软件实体的未来事件而制定的对现行开发设计进行约束的一个原则。
+
+　　开闭原则对扩展开放，对修改关闭，并不意味着不做任何修改，低层模块的变更，必然要有高层模块进行耦合，否则就是一个孤立无意义的代码片段。
+
+## 6.3 为什么要采用开闭原则
 
 
-## 6.3 最佳实践
+
+## 6.4 如何使用开闭原则
+
+
+
+## 6.5 最佳实践
