设计模式之禅第6章

--- a/BookNote/设计模式之禅/第6章-开闭原则.md
+++ b/BookNote/设计模式之禅/第6章-开闭原则.md
@@ -23,12 +23,127 @@
 
 　　开闭原则对扩展开放，对修改关闭，并不意味着不做任何修改，低层模块的变更，必然要有高层模块进行耦合，否则就是一个孤立无意义的代码片段。
 
+　　变化分为三种类型：
+
+1. 逻辑变化
+
+   只变化一个逻辑，而不涉及其他模块。
+
+   可以通过修改原有类中的方法来完成，前提条件是所有依赖或关联类都按照相同的逻辑处理。
+
+2. 子模块变化
+
+   一个模块变化，会对其他的模块产生影响，特别是一个低层次的模块变化必然引起高层次模块的变化，因此在通过扩展完成变化时，高层次的模块修改是必然的。
+
+3. 可见视图变化
+
+   可见试图是提供给客户使用的界面，如 JSP 程序、Swing 界面等，该部分的变化一般会引起连锁反应。
+
+   界面上按钮、文字的重新排布倒是简单，最常见的是业务耦和变化，例如显示数据的列表增加一列。
+
+   可以通过扩展来完成变化，这要看原有的设计是否灵活。
+
 ## 6.3 为什么要采用开闭原则
 
+　　采用开闭原则的原因：
 
+1. 开闭原则非常著名
+
+　　只要做面向对象编程的，不管是什么语言，Java 也好，C++ 也好，或者是 Smalltalk ，在开发时都会提及开闭原则。
+
+2. 开闭原则是最基础的一个原则
+
+　　除了开闭原则，其他五个原则（单一职责原则、里氏替换原则、迪米特法则、接口隔离原则、依赖倒置原则）都是开闭原则的具体形态，也就是说其他原则就是指导设计的工具和方法，而开闭原则才是其精神领袖。
+
+3. 开闭原则是非常重要的
+
+   * 开闭原则对测试的影响
+
+     如果在出现变化时，原有的健壮代码需要修改，不能通过扩展实现变化，就需要把原油的测试过程回笼一遍，需要进行单元测试、功能测试、集成测试甚至是验收测试，现在虽然在大力提倡自动化测试工具，但是仍然代替不了人工的测试工作。
+
+     一个方法的测试一般不少于 3 种，为什么呢？首先是正常的业务逻辑要保证测试到，其次是边界条件要测试到，然后是异常要测试到，比较重要的方法的测试方法甚至有十多种，而且单元测试是对类的测试，类中的方法耦和是允许的，在这样的条件下，如果再想着通过修改一个方法或多个方法代码来完成变化，该类的所有测试方法都要重构。
+
+     所以，需要通过扩展来实现业务逻辑的变化，而不是修改。
+
+   * 开闭原则可以提供复用性
+
+     在面向对象的设计中，所有哦的逻辑都是从原子逻辑组合而来的，而不是在一个类中独立实现一个业务逻辑。只有这样代码才可以复用，粒度越小，被复用的可能性就越大。
+
+     为什么要复用？减少代码量，避免相同的逻辑分散在多个角落，避免日后的维护人员为了修改一个微小的缺陷或增加新功能而要在整个项目中到处查找相关的代码。
+
+     如何提高复用率？缩小逻辑粒度，直到一个逻辑不可再拆分为止。
+
+   * 开闭原则可以提高可维护性
+
+     一款软件投产后，维护人员的共奏不仅仅是对数据进行维护，还可能要对程序进行扩展。而通过扩展而不是修改，会让维护简单一些。
+
+   * 面向对象开发的要求
+
+     有变化就要有策略去应对，如何快速应对呢？这就需要在设计之初考虑到所有可能变化的因素，然后留下接口，等待 “ 可能 ” 转变为 “ 现实 ”。
 
 ## 6.4 如何使用开闭原则
 
+　　其他 5 个原则（单一职责原则、里氏替换原则、迪米特原则、接口隔离原则、依赖倒置原则）是对开闭原则的具体解释，而开闭原则并不局限于这么多。
 
+　　如何在实际工作中使用开闭原则呢？
+
+1. 抽象约束
+
+   抽象是对一组事物的通用描述，没有具体的实现，也就表示它可以有非常多的可能性，可以根据需求的变化而变化。
+
+   因此，通过接口或抽象类可以约束一组可能变化的行为，并且能够实现对扩展开放，其包含三层含义：
+
+   * 第一，通过接口或抽象类约束扩展，对扩展进行边界限定，不允许出现在接口或抽象类中不存在的 public  方法；
+   * 第二，参数类行、引用对象尽量使用接口或者抽象类，而不是实现类；
+   * 第三，抽象层尽量保持稳定，一旦确定即不允许修改。
+
+   要实现对扩展开放，首要的前提条件就是抽象约束。
+
+2. 元数据（metadata）控制模块行为
+
+   尽量使用元数据来控制程序的行为，减少重复开发。
+
+   元数据：用来描述环境和数据的数据，通俗地说就是配置参数，参数可以从文件中获得，也可以从数据库中获得。
+
+   通过扩展一个子类，修改配置文件，完成业务变化，这也是采用框架的好处。
+
+3. 制定项目章程
+
+   在一个团队中，建立项目章程是非常重要的，因为章程中指定了所有人员都必须遵守的约定，对项目来说，约定优于配置。
+
+   一旦项目成员都熟悉这样的规则，比通过接口或抽象类进行约束效率更高，而且扩展性一点也没有减少。
+
+4. 封装变化
+
+   对变化的封装包含两层含义：
+
+   * 第一，将相同的变化封装到一个接口或抽象类中；
+   * 第二，将不同的变化封装到不同的接口或抽象类中，不应该有两个不同的变化出现在同一个接口或抽象类中。
+
+   封装变化，也就是受保护的变化（protected variations），找出预计有变化或不稳定的点，为这些变化点创建稳定的接口，准确地讲是封装可能发生的变化，一旦预测到或 “ 第六感 ” 发觉有变化，就可以进行封装，23 个设计模式都是从各个不同的角度对变化进行封装的。
 
 ## 6.5 最佳实践
+
+　　软件设计最大的难题就是应对需求的变化，但是纷繁复杂的需求变化又是不可预料的，可以根据 6 大设计原则以及 23 个设计模式来 “ 封装 ” 未来的变化。
+
+　　将 6 大原则（单一职责原则、开闭原则、里氏置换原则、迪米特原则、接口隔离原则、依赖倒置原则）结合使用的好处：建立稳定、灵活、健壮的设计。
+
+　　开闭原则是重中之重，是最基础的原则，是其他 5 大原则的精神领袖。
+
+　　使用开闭原则时要注意的几个问题：
+
+1. 开闭原则也只是一个原则
+
+   开闭原则只是精神口号，实现拥抱变化的方法非常多，并不局限于这 6 大设计原则，但是遵循这 6 大设计原则基本上可以应对大多数变化。
+
+   因此，在项目中应尽量采用这 6 大原则，适当时候可以进行扩充。
+
+2. 项目规章非常重要
+
+   优秀的章程能带给项目非常多的好处，如提高开发效率、降低缺陷率、提高团队士气、提高技术成员水平，等等。
+
+3. 预知变化
+
+   架构师设计一套系统不仅要符合现有的需求，还要适应可能发生的变化，这才是一个优良的架构。
+
+　　开闭原则是一个终极目标，任何人包括大师级任务都无法百分之百做到，但朝这个方向努力，可以非常显著地改善一个系统的架构，真正做到 “ 拥抱变化 ” 。
