--- a/Android/view/view的实践/系统控件的常用使用.md
+++ b/Android/view/view的实践/系统控件的常用使用.md
@@ -26,4 +26,63 @@ scorllView.scrollTo(0, 0);
 
 
 
+## 2. ListView
+
+### 2.1 item 的最外层 layout_width 、layout_height 和 margin 失效
+
+**问题描述**
+
+　　ListView 中的 Item 是 FrameLayout，设置了 layout_width 或者 layout_height 属性，属性失效。
+
+```java
+//使用此方法添加 item 布局
+convertView = LayoutInflater.from(parent.getContext()).inflate(R.layout.item_big_exercise_error_book, null);
+```
+
+**问题原因**
+
+```java
+    /**
+     * 添加一个 view 作为子视图，并确保其测量（如有必要）并正确定位
+     */
+    private void setupChild(View child, int position, int y, boolean flowDown, int childrenLeft,
+            boolean selected, boolean isAttachedToWindow) {
+        ...
+        //采用试图中已存在的布局参数，否则就创建
+        AbsListView.LayoutParams p = (AbsListView.LayoutParams) child.getLayoutParams();
+        //如果 p 为空，则使用默认的
+        if (p == null) {
+            p = (AbsListView.LayoutParams) generateDefaultLayoutParams();
+        }
+        p.viewType = mAdapter.getItemViewType(position);
+        p.isEnabled = mAdapter.isEnabled(position);
+
+        ...
+    }
+	/**
+	* 默认的布局参数
+	*/
+    @Override
+    protected ViewGroup.LayoutParams generateDefaultLayoutParams() {
+        // 宽为 MATCH_PARENT，高为 WRAP_CONTENT
+        return new AbsListView.LayoutParams(ViewGroup.LayoutParams.MATCH_PARENT,
+                ViewGroup.LayoutParams.WRAP_CONTENT, 0);
+    }
+```
+
+　　而 `convertView = LayoutInflater.from(parent.getContext()).inflate(R.layout.item_big_exercise_error_book, null);`加载方式，返回的就是从 xml 加载的 temp View，没有设置 LayoutParams 信息，所以 ListView 使用的是默认的，item 布局的 layout_width 和 layout_height 失效。
+
+**解决方法**
+
+　　为 item 设置自己定义的布局。使用设置 LayoutParams 的加载方法：
+
+```java
+convertView = LayoutInflater.from(parent.getContext()).inflate(R.ljavaayout.item_big_exercise_error_book, parent, false);
+```
+
+```java
+public View inflate(@LayoutRes int resource, //加载的布局文件资源 id
+@Nullable ViewGroup root, //如果 attachToRoot（就是第三个参数）为 true，那么 root 就是为新加载的 View 指定父 View。否则，root 知识一个返回 View 层级的根布局提供 LayoutParams 值得简单对象。
+boolean attachToRoot) //新加载的布局是否添加到 root，如果为 false，root 参数仅仅用于为 xml 根局部创建正确的 LayoutParams 子类。
+```
 
