整理性能优化

--- a/Android/optimize/性能优化.md
+++ b/Android/optimize/性能优化.md
@@ -4,34 +4,43 @@
 
 1. 内存优化
 
-2. UI 优化（布局优化和绘制优化）
-3. 速度的优化（线程优化/网络优化）
+2. UI 优化（ 布局优化和绘制优化 ）
+3. 速度的优化（ 线程优化和网络优化 ）
 4. 电量优化
 5. 启动优化
 
 ## 1. 内存优化
-　　什么是内存泄漏？内存不在 GC 的掌控范围之内了。那么 java 的 GC 内存回收机制是什么？某对象不再有任何引用的时候才会进行回收。
-![](./GC.png)
+### 1.1 内存泄漏
+
+　　内存泄漏：内存不在 GC 的掌控范围之内了。
+
+　　java 的 GC 内存回收机制：某对象不再有任何引用的时候才会进行回收。
+![](image/GC.png)
 　　当向上寻找，一直寻找到 GC Root 的时候，此对象不会进行会回收；如果数据在整个页面或整个项目都没有引导，则这个对象会被 GC 掉。
 
-#### GC 的引用点
+**GC 的引用点**
+
 1. Java 栈中引用的对象
 2. 方法静态引用的对象
 3. 方法常量引用的对象
 4. Native 中 JNI 引用的对象
-5. Thread - "活着的"线程
+5. Thread -  " 活着的 " 线程
 
-#### 内存溢出
+### 1.2. 内存溢出
 
-###### 分析原因
-![](内存溢出原因.png)
+**内存溢出的原因图**
+
+![](image/内存溢出原因.png)
 　　内存泄漏一般导致应用卡顿，极端情况会导致项目 boom。Boom 的原因是因为超过内存的阈值。原因只要有两方面：
-* 代码存在泄漏，内存无法及时释放导致 oom。
-* 一些逻辑消耗了大量内存，无法及时释放或者超过导致 oom。
+
+1. 代码存在泄漏，内存无法及时释放导致 oom。
+
+2. 一些逻辑消耗了大量内存，无法及时释放或者超过导致 oom。
 
 　　所谓消耗大量的内存的，绝大多数是因为图片加载。这是 oom 出现最频繁的地方。
 
-#### 内存分析工具
+### 1.3. 内存分析工具
+
 　　性能优化工具：
 * Heap SnapShot 工具
 * Head Views 工具
@@ -39,29 +48,29 @@
 * MAT 工具
 * TraceView 工具（Device Monitor）
 
-#### 注意事项
+### 1.4. 注意事项
+
 * 尽量不要使用 Activity 的上下文，而是使用 application 的上下文，因为 application 的生命周期长，进程退出时才会被销毁。所以，单例模式是最容易造成内存泄漏的根本所在，因为单例模式的生命周期应该和 application 的生命周期一样长，而不是和 Activity 的相同。
 * Animation 也会导致内存溢出，因为当使用 view 显示动画时，导致 view 被 Activity 持有，而 Activity 又持有 view。最后因为 Activity 无法释放，导致内存泄漏。解决方法是在 Activity 的 onDestory() 方法中调用 Animation.cancle() 进行停职，当然一些简单的动画可以通过自定义 view 来解决。
 
-> 3.内存优化
-
 
 ## 2. UI 优化
-　　UI 优化主要包括布局优化以及 view 的绘制优化。
+　　UI 优化主要包括**布局优化**以及 **view 的绘制优化**。
 
-　　什么情况会导致卡顿？一般是如下几种情况：
+　　一般会导致卡顿的情况：
 1. 人为在 UI 线程中做轻微耗时操作，导致 UI 线程卡顿；
 2. 布局 Layout 过于复杂，无法在 16 ms 内完成渲染；
 3. 同一时间动画执行的次数过多，导致 CPU 或 GPU 负载过重；
-4. View 过度绘制，导致某些像素在同一帧时间内被绘制多次，从而使 COU 或 GPU 负载过重；
+4. View 过度绘制，导致某些像素在同一帧时间内被绘制多次，从而使 CPU 或 GPU 负载过重；
 5. View 频繁的触发 measure、layout，导致 measure、layout 累计耗时过多及整个 View 频繁的重新渲染；
 6. 内存频繁触发 GC 过多（同一帧中频繁创建内存），导致暂时阻塞渲染操作；
 7. 冗余资源及逻辑等导致加载和执行缓慢；
 8. ANR；
 
-#### 布局优化
+### 2.1. 布局优化
 
-###### GPU 绘制
+**调试过度绘制**
+
 　　对于 UI 性能的优化可以通过开发者选项中的 GPU 过度绘制工具来进行分析。在设置 -> 开发者选项 -> 调试 GPU 过度绘制中打开调试。
 
 　　开启后在我们想要调试的应用界面中可以看到各种颜色的区域，具体含义如下：
@@ -76,19 +85,24 @@
 
 　　目标就是尽量减少红色 Overdraw，看到更多的蓝色区域。
 
-　　Overdraw 有时候是因为 UI 布局存在大量重叠的部分，还有的时候是因为非必要的重叠背景。例如某个 Activity 有一个背景，然后里面的 Layout 又有自己的背景，同时子 View 又分别有自己的背景。仅仅是通过移除非必要的背景图片，这就能减少大量的红色 Overdraw 区域，增加蓝色区域的占比。这一措施能够显著提升程序性能。
+　　解决 Overdraw 的一些方法：
 
-　　如果布局中既能采用 RelativeLayout 和 LinearLayout，那么直接使用 LinearLayout，因为 RelativeLayout 布局比较复杂，绘制的时候需要花费更多的 CPU 时间。如果需要多了 LinearLayout 或者 FrameLayout 嵌套，那么可采用 RelativeLayout。因为多层嵌套导致布局的绘制有大部分是重复的，这会减少程序的性能。
+1. 减少背景的重叠。如果子 View 有自己的背景，并且能够覆盖父 View，就可以移除非必要的背景图片，这样能够减少大量的红色 Overdraw 区域，增加蓝色区域的占比，能够显著提升程序性能。
 
-###### GPU 呈现模式分析
+2. 使用 LinearLayout 代替可以替换的 RelativeLayout 。因为 RelativeLayout 布局比较复杂，绘制的时候需要花费更多的 CPU 时间。如果需要多个 LinearLayout 或者 FrameLayout 嵌套，那么可采用 RelativeLayout。因为多层嵌套导致布局的绘制有大部分是重复的，这会减少程序的性能。
+
+**查看每帧的渲染时长**
+
 　　可以打开设置 -> 开发者选项 -> GPU 呈现模式分析 -> 在屏幕上显示为条形图。
 
-　　也可以在执行完 UI 滑动操作后在命令行输入如下命令查看命令行打印的 GPU 渲染数据（分析依据：Draw + Process + Execute = 完整的显示一帧时间 < 16ms）：
+　　随着界面的刷新，界面上会以实时柱状图来显示每帧的渲染时间，柱状图越高表示渲染时间越长，每个柱状图偏上都有一根表示 16 ms 基准的绿色横线，每一条竖着的柱状线都包含三部分（蓝色代表测量绘制 Display List 的时间，红色代表 OpenGL 渲染 Display List 所需要的时间，黄色代表 CPU 等待 GPU 处理的时间），只要每一帧的总时间低于基准线就不会发生 UI 卡顿问题（个别超出基准线其实也不算什么问题的）。
+
+　　也可以在执行完 UI 滑动操作后在命令行输入如下命令查看命令行打印的 GPU 渲染数据：
 ```
 	adb shell dumpsys gfxinfo [应用包名]
 ```
 
-　　随着界面的刷新，界面上会以实时柱状图来显示每帧的渲染时间，柱状图越高表示渲染时间越长，每个柱状图偏上都有一根表示 16ms 基准的绿色横线，每一条竖着的柱状线都包含三部分（蓝色代表测量绘制 Display List 的时间，红色代表 OpenGL 渲染 Display List 所需要的时间，黄色代表 CPU 等待 GPU 处理的时间），主要每一帧的总时间低于基准线就不会发生 UI 卡顿问题（个别超出基准线其实也不算什么问题的）。
+　　分析依据：Draw + Process + Execute = 完整的显示一帧时间 < 16ms
 
 > 1.布局优化
 
@@ -115,21 +129,18 @@
 ###### 优化 1.2
 7. 复杂界面可选择 ConstraintLayout，可有效减少层级。
 
+### 2.2. 绘制优化
+
+　　绘制优化主要是指 View 的 Ondraw 方法需要避免执行大量的操作。包括 2 个方面：
+1. ondraw 方法不需要创建新的布局对象， ondraw 方法是实时执行的，创建新的布局对象会产生大量的临时对象，导致占用了很多的内存，并且使系统不断的 GC，降低了执行效率。
+
+2. ondraw 方法不需要执行耗时操作，少使用循环。因为循环会占用 CPU 的时间。导致绘制不流畅、卡顿等等。
+
+　　Google 官方指出，view 的绘制帧率稳定在 60 dps ，这要求每帧的绘制时间不超过 16 ms ( 1000 / 60 )。系统每隔 16ms 发出 VSYNC 信号，如果在 16 ms 内未完成操作，就会产生掉帧的现象，刷新帧率就下降，当刷新帧率由正常的 60 fps 降到 30fps，就会出现卡顿。
 
 
-#### 代码优化
-　　Android Studio 有自带的代码检查工具。打开 Analyze -> Run Inspection by Name... -> unused resource 点击开始检测。
 
-　　也可以将鼠标放在代码区点击右键 -> Analyze -> Inspect Code -> 界面选择你要检测的模块 ->点击确认开始检测。
 
-　　上面的方法是最容易找到代码缺陷以及无用代码的地方。
-
-#### 绘制优化
-　　什么是绘制优化？绘制优化主要是指 View 的 Ondraw 方法需要避免执行大量的操作。分为 2 个方面：
-* ondraw 方法不需要创建新的布局对象，这是因为 ondraw 方法是实时执行的，这样会产生大量的临时对象，导致占用了很多的内存，并且使系统不断的 GC，降低了执行效率。
-* ondraw 方法不需要执行耗时操作，在 onDraw 方法里少使用循环，因为循环会占用 CPU 的时间。导致绘制不流畅、卡顿等等。Google 官方指出，view 的绘制帧率稳定在 60 dps ，这要求每帧的绘制时间不超过 16 ms(1000/60)。虽然很难保证，但我们需要尽可能的降低。
-
-　　60 dps 是目前最合适的图像显示速度，也是绝大部分 Android 设备设置的调试频率，如果在 16 ms 内顺利完成界面刷新操作可以展示出流畅的画面，而由于任何原因导致接收到 VSYNC 型号的时候无法完成本次刷新操作，就会产生掉帧的现象，刷新帧率自然也就跟着下降（假定刷新帧率由正常的 60 fps 降到 30 fps，用户就会明显感知到卡顿）。
 
 > 2.绘制优化
 
@@ -154,88 +165,121 @@
 ## 3. 网络优化
 　　可以通过 Memory 下面的 Net 进行网络的监听。
 
-#### ANR 问题
-　　什么是 ANR？application not responding，应用程序无响应。那么一般什么时候会出现 ANR？Android 官方规定：activity 如果在 5s 内无响应事件（屏幕触摸事件或者键盘输入事件），BroadcastReceiver 如果在 10s 内无法处理完成，Service 如果在 20s 内无法处理完成，这三种情况会导致 ANR。
+　　ANR：application not responding，应用程序无响应。
 
-#### 线程优化
-　　出现 ANR 的三种情况，绝大多数就是因为线程阻塞导致的。那么如何处理呢？Android 系统提供了若干组工具类来解决此问题：
+　　ANR 出现的时机：
+
+1. activity 如果在 5s 内无响应事件（屏幕触摸事件或者键盘输入事件）；
+2. BroadcastReceiver 如果在 10s 内无法处理完成；
+3. Service 如果在 20s 内无法处理完成。
+
+### 3.1.线程优化
+
+　　大多数就是因为线程阻塞导致的 ANR，Android 系统提供了一些工具类来解决此问题：
 * Asynctask：为 UI 线程与工作线程之间进行快速处理的切换提供一种简单边界的机制。适用于当下立即需要启动，但是异步执行的生命周期短暂的场景。
 * HandlerThread：为某些回调方法或者等待某些执行任务设置一个专属的线程，并提供线程任务的调度机制。
 * ThreadPool：把任务分解成不同的单元，分发到各个不同的线程上，进行同时并发处理。
 * IntentService：适合执行由 UI 触发的后台任务。并可以把这些任务执行的情况进行一定的机制反馈给 UI。
 
-　　网络请求耗时会给用户带来卡顿的产品体验，虽然可以使用 Loading 提升用户体验，但属于治标不治本。
+　　一般多线程的情况可以通过 Asynctask 处理，也可以使用 annotation。
 
-　　一般多线程的情况可以通过 Asynctask 处理。这个可以快捷方便的处理多线程而且不会导致线程阻塞，而且也可以控制线程的顺序。
+### 3.2. 网络优化
 
-#### KO 网络优化
-　　网络优化最重要就是时间、速度和成功率了。
+　　网络优化的重点：时间、速度和成功率。
 
-###### 图片处理
-* 使用 WebP 格式；同样的图片，采用 WebP 格式可大幅节省流量，相对于 JPG 格式的图片，流量能节省将近 25% 到 35%；相对于 PNG 格式的图片，流量可以节省将近 80%。最重要的是使用 WebP 之后图片质量也没有改变。
+#### 3.2.1. 图片优化
 
-* 使用缩略图；
+1. 使用 WebP 格式。同样的图片，采用 WebP 格式可大幅节省流量，相对于 JPG 格式的图片，流量能节省将近 25% 到 35%；相对于 PNG 格式的图片，流量可以节省将近 80%。最重要的是使用 WebP 之后图片质量也没有改变。
 
-###### 网络请求处理
-　　可以对服务器返回数据进行缓存，设定有效时间，有效时间之内不走网络请求，减少流量消耗。可以使用 HttpResponseCache 对网络进行缓存。
+2. 使用缩略图。可以控制 inside 和 option，进行图片缩放。
 
-　　在某些情况下，尽量少使用 GPS 定位，如果条件允许，尽可能使用网络定位。
+#### 3.2.2. 网络请求处理的优化
 
-　　下载、上传，尽可能使用断点。
+1. 对服务器返回数据进行缓存，设定有效时间，有效时间之内不走网络请求，读取缓存显示，从而减少流量消耗。可以使用 HttpResponseCache 进行数据缓存。
 
-　　刷新数据时，尽可能使用局部刷新，而不是全局刷新。第一、界面会闪屏一下，网差的界面直接白屏一段时间也不是不可能；第二，流量的使用，很浪费。
+2. 尽量少使用 GPS 定位，如果条件允许，尽可能使用网络定位。
+
+3. 下载和上传尽可能使用断点。
+
+4. 刷新数据时，尽可能使用局部刷新，而不是全局刷新。第一、界面会闪屏一下，网差的时候界面可能会直接白屏一段时间；第二，节省流量。
 
 ## 4. 启动优化
-　　众所周知，一个好的产品，除了功能强大，好的性能也必不可少。有调查显示，近 50% 的受访者因为 apk 太大而拒绝使用，近 40% 的受访者会因为 App 性能差而卸载，性能也是造成 App 用户沮丧的头号原因。
+　　安卓应用的启动方式分为三种：冷启动、暖启动、热启动。不同的启动方式决定了应用 UI 对用户可见所需要花费的时间长短。冷启动消耗的时间最长，基于冷启动方式的优化工作也是最考验产品用户体验的地方。
 
-　　安卓应用的启动方式分为三种：冷启动、暖启动、热启动，不同的启动方式决定了应用 UI 对用户可见所需要花费的时间长短。顾名思义，冷启动消耗的时间最长。基于冷启动方式的优化工作也是最考验产品用户体验的地方。
+### 4.1. 启动方式
 
-#### 冷启动
-　　为什么说冷启动是耗时最长的？冷启动是在启动应用前，系统没有获取到当前 app 的 activity、Service 等等。例如，第一次启动 app。又或者说杀死进程后第一次启动。那么对比其他两种当时，冷启动自然是耗时最长的。
+#### 4.1.1. 冷启动
+
+　　冷启动是在启动应用前，系统没有获取到当前 app 的 activity、Service 等等。例如第一次启动 app 或者杀死进程后第一次启动。那么对比其他两种当时，冷启动是耗时最长的。
 
 　　应用发生冷启动时，系统一定会执行下面的三个任务：
-* 开始加载并启动应用
-* 应用启动后，显示一个空白的启动窗口（启动闪屏页）
-* 创建应用信息
+1. 开始加载并启动应用
 
-　　那么创建应用信息，系统就需要做一屁股的事：
-* application 的初始化
-* 启动 UI 线程
-* 导入视图（inflate view）
-* 计算视图大小（onmesure view）
-* 得到视图排版（onlayout view）
-* 绘制视图（ondraw view）
+2. 应用启动后，显示一个空白的启动窗口（启动闪屏页）
 
-　　这其中有两个 creation 工作，分别是 Application 和 Activity creation，均在 View 绘制展示之前。所以，在应用自定义的 Application 类和第一个 Activity 类中，onCreate() 方法做的事情越多，冷启动消耗的时间越长。
+3. 创建应用信息
 
-#### 暖启动
+　　那么创建应用信息，系统需要做的事情：
+
+　3.1 application 的初始化
+
+　3.2 启动 UI 线程
+
+　3.3 导入视图（inflate view）
+
+​	3.4 计算视图大小（onmesure view）
+
+　3.5 得到视图排版（onlayout view）
+
+　3.6 绘制视图（ondraw view）
+
+　　在冷启动过程中有两个 creation 工作，分别是 Application 和 Activity creation，它们均在 View 绘制展示之前。所以，在应用自定义的 Application 类和第一个 Activity 类中，onCreate() 方法做的事情越多，冷启动消耗的时间越长。
+
+#### 4.1.2. 暖启动
+
 　　当应用中的 Activities 被销毁，但在内存中常驻时，应用的启动方式就会变为暖启动。相比冷启动，暖启动过程减少了对象初始化、布局加载等工作，启动时间更短。但启动时，系统依然会展示闪屏页，直到第一个 Activity 的内容呈现为止。
 
-#### 热启动
-　　相比暖启动，热启动时应用做的工作更少，启动时间更短。热启动产生的常见很多，常见如：用户使用返回键退出应用，然后马上又重新启动应用。
+#### 4.1.3. 热启动
 
-#### 如何优化
-　　对于冷启动时间长，可以改变项目的 theme，修改为 launch 的 theme。一般项目都会有闪屏页，从闪屏页跳转到首页，倒计时结束就自动进入首页，可以在闪屏页进行一些必要的加载，例如用户信息，定位等等，至于其他的，可以进入主页进行预加载。
+　　相比暖启动，热启动时应用做的工作更少，启动时间更短。产生热启动的场景有：用户使用返回键退出应用，然后马上又重新启动应用。
 
-　　还可以把闪屏页当作一个 fragment 嵌套在 MainActivity，那么可以在进入闪屏时直接预加载主页的 view。倒计时结束后，把闪屏页 remove 掉直接显示首页。
+### 4.2. 如何优化
 
-　　对启动优化总结就是减少耗时操作：
-* 主线程中涉及到 Shareperference 能否在非 UI 线程执行。
-* Application 的创建过程中尽量少的进行耗时操作。
-* 减少布局的层次，并且生命周期回调的方法中尽量减少耗时的操作。
+　　可以在进入主页时添加闪屏页，倒计时显示闪屏页。在闪屏页显示的时候进行一些必要的加载，例如用户信息、定位等等。在倒计时结束后关闭闪屏页进入首页。
+
+　　另外，在启动的 Application 和 首页 Activity 要减少耗时操作：
+1. 主线程中涉及到 Shareperference 能否在非 UI 线程执行。
+
+2. Application 的创建过程中尽量少的进行耗时操作。
+
+3. 减少布局的层次，并且生命周期回调的方法中尽量减少耗时的操作。
 
 ## 5. 电量优化
 
-#### 耗电概念
-　　众所周知，音乐和视频其实是耗电量最大的。如果用户一旦发现应用非常耗电，大多数就会选择卸载来解决此类问题。
+### 5.1. 电量优化
 
-#### 如何优化
-　　其实把其他 4 个优化解决了，就是最好的电量优化。对于电量优化的一些建议：
-* 需要进行网络请求是，首先判断网络当前的状态。
-* 在多网络请求的情况下，最好进行批量处理，尽量避免频繁的间隔网络请求。
-* 在同时有 wifi 和移动数据的情况下，应该直接屏蔽移动数据的网络请求，只有当 wifi 断开时再调用，因为，wifi 请求的耗电量远比移动数据的耗电量低的低。
-* 后台任务要尽可能少的唤醒 CPU。（比如，锁屏时，QQ 的消息提示行就是唤醒了 COU，但是他的提示只有在你打开锁屏或者进行充电时才会进行提示）。
+　　关于电量优化的建议：
+1. 需要进行网络请求时，首先判断网络当前的状态。
 
-## 参考文章
+2. 在多网络请求的情况下，最好进行批量处理，尽量避免频繁的间隔网络请求。
+
+3. 在同时有 wifi 和移动数据的情况下，应该直接屏蔽移动数据的网络请求，只有当 wifi 断开时再调用，因为 wifi 请求的耗电量远比移动数据的耗电量低的低。
+
+* 后台任务要尽可能少的唤醒 CPU。
+
+## 6. 其他优化
+
+### 6.1. 查看代码缺陷和无用资源
+
+　　Android Studio 有自带的代码检查工具。打开 Analyze -> Run Inspection by Name... -> unused resource 点击开始检测。
+
+　　也可以将鼠标放在代码区点击右键 -> Analyze -> Inspect Code -> 界面选择你要检测的模块 ->点击确认开始检测。
+
+　　上面的方法是最容易找到代码缺陷以及无用代码的地方。
+
+
+
+## 7. 参考文章
+
 [Android 性能优化全方面解析](https://juejin.im/post/5a0d30e151882546d71ee49e)
 [Android 性能优化最佳实践](https://juejin.im/post/5b50b017f265da0f7b2f649c)
