--- a/Android/optimize/性能优化.md
+++ b/Android/optimize/性能优化.md
@@ -39,6 +39,29 @@
 
 　　所谓消耗大量的内存的，绝大多数是因为图片加载。这是 oom 出现最频繁的地方。
 
+#### 1.2.1. 如何查看内存溢出
+
+1. 确定是否存在内存溢出的问题
+
+　　方法有两种：
+
+* Android -> SystemInformation -> Memory Usage 查看 Object 里面是否有没有被释放的 Views 和 Activity。
+* 命令 `adb shell dumpsys meminfo 包名 -d`。
+
+2. 通过看 Memory Montor 工具，检查动作，反复多次执行某一个操作，查看内存的大概变化情况。
+3. 使用 Heap SnapShot 工具（堆栈快照）更仔细地查找泄漏的位置。
+
+　　点击 -> 进行一段时间的监控，生成一个文件 -> package treeview 会出现一些信息，信息内容如下：
+
+* Total count：内存中该类的对象个数
+* Heap count：堆内存中该类的对象个数
+* Size of：物理大小
+* Shallow size：该对象本身占有内存大小
+* Retained size：释放该对象后，节省的内存大小
+* Depth：深度
+* Shadow size：对象本身内存大小
+* Domination size：管辖的内存大小
+
 ### 1.3. 内存分析工具
 
 　　性能优化工具：
@@ -48,10 +71,16 @@
 * MAT 工具
 * TraceView 工具（Device Monitor）
 
+　　第三方文熙工具：
+
+* Memory Analyzer
+* GT Home
+* iTest
+
 ### 1.4. 注意事项
 
-* 尽量不要使用 Activity 的上下文，而是使用 application 的上下文，因为 application 的生命周期长，进程退出时才会被销毁。所以，单例模式是最容易造成内存泄漏的根本所在，因为单例模式的生命周期应该和 application 的生命周期一样长，而不是和 Activity 的相同。
-* Animation 也会导致内存溢出，因为当使用 view 显示动画时，导致 view 被 Activity 持有，而 Activity 又持有 view。最后因为 Activity 无法释放，导致内存泄漏。解决方法是在 Activity 的 onDestory() 方法中调用 Animation.cancle() 进行停职，当然一些简单的动画可以通过自定义 view 来解决。
+* 长生命周期的对象使用 Application 的上下文，而不是 Activity 的上下文（Context）。
+* Animation 会导致内存溢出。 view 显示动画时，View 会持有 Activity 对象，而动画持有 View，动画不 cancel 就会一直去执行 view 的 onDraw 方法，那么 Activity 就会被一直持有，不能被释放，导致内存泄漏。解决方法是在 Activity 的 onDestory() 方法中调用 Animation.cancle() 进行停止，也可以通过自定义 view 来代替动画。
 
 
 ## 2. UI 优化
