更新性能优化

--- a/Android/optimize/性能优化.md
+++ b/Android/optimize/性能优化.md
@@ -98,11 +98,60 @@
 
 ### 2.1. 布局优化
 
-**调试过度绘制**
+　　屏幕上的某个像素在同一帧的时间内被绘制了多次，在多层次的 UI 结构里面，如果不可见的 UI 也在做绘制的操作，这就会导致某些像素区域被绘制了多次，这就浪费了大量的 CPU 以及 GPU 资源。
+
+#### 2.1.1. 关于布局优化的方法
+
+1. 如果父控件有颜色，也有自己需要的颜色，那么就不必在子控件加背景颜色。
+2. 如果每个子控件的颜色不太一样，而且可以完全覆盖父控件，那么就不需要在子控件上加背景颜色。
+3. 尽量避免不必要的嵌套。
+4. 能用 LinearLayout 和 FrameLayout，就不要用 RelativeLayout，因为 RelativeLayout 控件想对比较复杂，测试也相对耗时。
+
+5. 使用 include 和 merge 增加复用，减少层级。
+
+   针对嵌套布局，goognle 提出了 include、merge 和 ViewStub 。
+
+   include 可以提高布局的复用性，大大方便开发，include 没有减少布局的嵌套，但是 include 和 merge 联手搭配，还是不错的。
+
+   merge 的布局取决于父控件是哪个布局，使用 merge 相当于减少了自身的一层布局，直接采用父 include 的布局，当然直接在父布局里面使用意义不大，所以会和 include 配合使用，即增加了布局的复用性，也减少了一层布局嵌套。
+
+6. ViewStub 按需加载，更加轻便。
+
+   ViewStub 可以按需加载，在需要的时候 ViewStub 中的布局才加载到内存。对于一些进度条，提示信息等等少次数使用的功能，使用 ViewStub 很合适。
+
+7. 复杂界面可选择 ConstraintLayout，可有效减少层级。
+
+   ConstraintLayout 可以有效地解决布局嵌套过多的问题。ConstraintLayout 使用约束的方式来指定各个控件的位置和关系，有点类似于 RelativeLayout，但远比 RelativeLayout 要更强大。所以简单布局简单处理，复杂布局 ConstraintLayout 很好使。
+
+### 2.2. 绘制优化
+
+　　平时感觉的卡顿问题最主要的原因之一是因为渲染性能，因为越来越复杂的界面交互，其中可能添加了动画、图片等等。希望创造出越炫的交互界面，同时也希望可以流畅显示，但是往往卡顿就会发生在这里。
+
+　　这个是 Android 的渲染机制造成的，Android 系统每隔 16ms 发出 VSYNC 信号，触发对 UI 进行渲染，但是渲染未必成功，如果成功了那么代表一切顺利，但是失败了可能就要延误时间，或者直接跳过去，给人视觉上的表现就是要么卡了一会，要么跳帧。
+
+　　View 的绘制频率保证 60 fps 是最佳的，这就要求每帧绘制时间不超过 16ms ( 16ms = 1000 / 60 ) ，虽然程序很难保证 16 ms 这个时间，但是尽量降低 onDraw 方法中的复杂度总是切实有效的。
+
+　　解决方法：
+**第一点：**onDraw 方法中不要做耗时的任务，也不做过多的循环操作，特别是嵌套循环，虽然每次循环耗时很小，但是大量的循环势必霸占 CPU 的时间片，从而造成 View 的绘制过程不流畅。
+
+**第二点：**除了循环之外，onDraw() 中不要创建新的布局对象，因为 onDraw() 方法一般都会频繁大量调用，就意味着会产生大量的临时对象，不仅占用内存，而且会导致系统更加频繁的 GC，大大降低程序的执行速度和效率。
+
+#### 2.2.1 关于绘制优化的方法
+
+1. onDraw 中不要创建新的布局对象。
+2. onDraw 方法中不要做耗时的任务，少使用循环。
+
+### 2.3. 检查 UI 优化的方法
+
+#### 2.3.1. **调试过度绘制**
 
 　　对于 UI 性能的优化可以通过开发者选项中的 GPU 过度绘制工具来进行分析。在设置 -> 开发者选项 -> 调试 GPU 过度绘制中打开调试。
 
-　　开启后在我们想要调试的应用界面中可以看到各种颜色的区域，具体含义如下：
+　　开启后在我们想要调试的应用界面中可以看到各种颜色的区域：
+
+![](image/布局优化五层.png)
+
+　　具体含义如下：
 
 | 颜色 | 含义 |
 |--------|--------|
@@ -114,15 +163,11 @@
 
 　　目标就是尽量减少红色 Overdraw，看到更多的蓝色区域。
 
-　　解决 Overdraw 的一些方法：
-
-1. 减少背景的重叠。如果子 View 有自己的背景，并且能够覆盖父 View，就可以移除非必要的背景图片，这样能够减少大量的红色 Overdraw 区域，增加蓝色区域的占比，能够显著提升程序性能。
-
-2. 使用 LinearLayout 代替可以替换的 RelativeLayout 。因为 RelativeLayout 布局比较复杂，绘制的时候需要花费更多的 CPU 时间。如果需要多个 LinearLayout 或者 FrameLayout 嵌套，那么可采用 RelativeLayout。因为多层嵌套导致布局的绘制有大部分是重复的，这会减少程序的性能。
-
-**查看每帧的渲染时长**
+#### 2.3.2. **查看每帧的渲染时长**
 
 　　可以打开设置 -> 开发者选项 -> GPU 呈现模式分析 -> 在屏幕上显示为条形图。
+
+![](image/模式分析.png)
 
 　　随着界面的刷新，界面上会以实时柱状图来显示每帧的渲染时间，柱状图越高表示渲染时间越长，每个柱状图偏上都有一根表示 16 ms 基准的绿色横线，每一条竖着的柱状线都包含三部分（蓝色代表测量绘制 Display List 的时间，红色代表 OpenGL 渲染 Display List 所需要的时间，黄色代表 CPU 等待 GPU 处理的时间），只要每一帧的总时间低于基准线就不会发生 UI 卡顿问题（个别超出基准线其实也不算什么问题的）。
 
@@ -131,146 +176,123 @@
 	adb shell dumpsys gfxinfo [应用包名]
 ```
 
-　　分析依据：Draw + Process + Execute = 完整的显示一帧时间 < 16ms
+　　分析依据：Draw + Process + Execute = 完整的显示一帧时间 < 16ms。
 
-> 1.布局优化
+## 3.内存优化
 
-###### 优化 1.0
-1. 如果父控件有颜色，也有自己需要的颜色，那么就不必在子控件加背景颜色。
-2. 如果每个子控件的颜色不太一样，而且可以完全覆盖父控件，那么就不需要在子控件上加背景颜色。
-3. 尽量避免不必要的嵌套。
-4. 能用 LinearLayout 和 FrameLayout，就不要用 RelativeLayout，因为 RelativeLayout 控件想对比较复杂，测试也相对耗时。
+　　内存泄漏：程序不再使用的对象无法被 GC 识别，导致对象一直留在内存当中，占用了内存空间。
 
-　　针对嵌套布局，goognle 提出了 include、merge 和 ViewStub 。
+　　内存泄漏分为 4 种：
 
-　　include 可以提高布局的复用性，大大方便开发，include 没有减少布局的嵌套，但是 include 和 merge 联手搭配，还是不错的。
+1. 集合类泄漏
+2. 单例 / 静态变量造成的内存泄漏
+3. 匿名内部类 / 非静态内部类
+4. 资源未关闭造成的内存泄漏
 
-　　merge 的布局取决于父控件是哪个布局，使用 merge 相当于减少了自身的一层布局，直接采用父 include 的布局，当然直接在父布局里面使用意义不大，所以会和 include 配合使用，即增加了布局的复用性，也减少了一层布局嵌套。
+### 3.1. 集合类泄漏
 
-　　ViewStub 可以按需加载，在需要的时候 ViewStub 中的布局才加载到内存。对于一些进度条，提示信息等等少次数使用的功能，使用 ViewStub 很合适。
+　　集合类（List 等）添加元素后，仍引用着集合元素对象，导致该集合中的元素对象无法被回收，从而导致内存泄漏。
 
-###### 优化 1.1
-5. 使用 include 和 merge 增加复用，减少层级。
-6. ViewStub 按需加载，更加轻便。
+　　**解决方法**：使用 clear 清理集合，并释放其引用（list = null）。
 
-　　ConstraintLayout 可以有效地解决布局嵌套过多的问题。ConstraintLayout 使用约束的方式来指定各个控件的位置和关系，有点类似于 RelativeLayout，但远比 RelativeLayout 要更强大。所以简单布局简单处理，复杂布局 ConstraintLayout 很好使。
+### 3.2. 单例 / 静态变量造成的内存泄漏
 
-###### 优化 1.2
-7. 复杂界面可选择 ConstraintLayout，可有效减少层级。
+　　单例模式具有其静态特性，它的生命周期等于应用程序的生命周期，所以容易造成内存泄漏。
 
-### 2.2. 绘制优化
+　　当一个生命周期长的对象持有了生命周期短的对象的引用，这就造成了内存泄漏。
 
-　　绘制优化主要是指 View 的 Ondraw 方法需要避免执行大量的操作。包括 2 个方面：
-1. ondraw 方法不需要创建新的布局对象， ondraw 方法是实时执行的，创建新的布局对象会产生大量的临时对象，导致占用了很多的内存，并且使系统不断的 GC，降低了执行效率。
+　　Context 和 Toast 是容易出现内存泄漏的，如果生命周期长，可以使用 Application 的 Content。
 
-2. ondraw 方法不需要执行耗时操作，少使用循环。因为循环会占用 CPU 的时间。导致绘制不流畅、卡顿等等。
-
-　　Google 官方指出，view 的绘制帧率稳定在 60 dps ，这要求每帧的绘制时间不超过 16 ms ( 1000 / 60 )。系统每隔 16ms 发出 VSYNC 信号，如果在 16 ms 内未完成操作，就会产生掉帧的现象，刷新帧率就下降，当刷新帧率由正常的 60 fps 降到 30fps，就会出现卡顿。
+　　**解决方法**：生命周期长的引用生命周期长的，不要引用生命周期短的。
 
 
 
+### 3.3. 匿名内部类 / 非静态内部类
 
+![](image/匿名内部类.png)
 
-> 2.绘制优化
+　　如果非静态内部类的生命周期长于外部类，再加上自动持有外部类的强引用，就会发生内存泄漏。解决方法就是改为静态内部类。
 
-　　其实布局优化了对于性能提升影响不算很大，但是是最容易入手、最直接接触的优化，所以不管能提升多少，哪怕只有百分之一的提升，也要做，因为影响性能的地方太多了，每个部分都提升一点，应用就可以提升很多了。
+　　匿名内部类也会持有外部类的强引用，解决方法也是改为静态内部类。
 
-　　平时感觉的卡顿问题最主要的原因之一是因为渲染性能，因为越来越复杂的界面交互，其中可能添加了动画、图片等等。希望创造出越炫的交互界面，同时也希望可以流畅显示，但是往往卡顿就会发生在这里。
+　　静态持有非静态类的引用，就会导致内存泄漏，解决方法是使用弱引用。
 
-　　这个是 Android 的渲染机制造成的，Android 系统每隔 16ms 发出 VSYNC 信号，触发对 UI 进行渲染，但是渲染未必成功，如果成功了那么代表一切顺利，但是失败了可能就要延误时间，或者直接跳过去，给人视觉上的表现就是要么卡了一会，要么跳帧。
+　　引用分为强引用、软引用、弱引用、虚引用，强度依次递减。
 
-　　View 的绘制频率保证 60 fps 是最佳的，这就要求每帧绘制时间不超过 16ms(16ms = 1000/60)，虽然程序很难保证 16 ms 这个时间，但是尽量降低 onDraw 方法中的复杂度总是切实有效的。
+* 强引用：不做特殊处理的一般都是强引用，如果一个对象具有强引用，GC 绝不会回收它。
+* 软引用（SoftReference）：如果内存空间足够，GC 就不会回收它，如果内存空间不足了，就会回收这些对象的内存。
+* 弱引用（WeakReference）：弱引用要比软引用更弱一个级别，内存不够回收，GC 的时候不管内存够不够也回收。不过 GC 是一个优先级很低的线程，所以也不会随便就被回收了。
+* 虚引用
 
-　　解决方法：
-**第一点：**onDraw 方法中不要做耗时的任务，也不做过多的循环操作，特别是嵌套循环，虽然每次循环耗时很小，但是大量的循环势必霸占 CPU 的时间片，从而造成 View 的绘制过程不流畅。
+### 3.4. 资源未关闭造成的内存泄漏
 
-**第二点：**除了循环之外，onDraw() 中不要创建新的布局对象，因为 onDraw() 方法一般都会频繁大量调用，就意味着会产生大量的临时对象，不仅占用内存，而且会导致系统更加频繁的 GC，大大降低程序的执行速度和效率。
+　　资源为关系的情况有：
 
-###### 优化 2.0
-8. onDraw 中不要创建新的布局对象
-9. onDraw 方法中不要做耗时的任务
+1. 网络、文件等流忘记关闭
+2. 手动注册广播时，退出时忘记 unregisterReceiver()
+3. Service 执行完后忘记 stopSelf()
+4. EventBus 等观察者模式的框架忘记手动解除注册
 
-
-## 3. 网络优化
-　　可以通过 Memory 下面的 Net 进行网络的监听。
-
-　　ANR：application not responding，应用程序无响应。
-
-　　ANR 出现的时机：
-
-1. activity 如果在 5s 内无响应事件（屏幕触摸事件或者键盘输入事件）；
-2. BroadcastReceiver 如果在 10s 内无法处理完成；
-3. Service 如果在 20s 内无法处理完成。
-
-### 3.1.线程优化
-
-　　大多数就是因为线程阻塞导致的 ANR，Android 系统提供了一些工具类来解决此问题：
-* Asynctask：为 UI 线程与工作线程之间进行快速处理的切换提供一种简单边界的机制。适用于当下立即需要启动，但是异步执行的生命周期短暂的场景。
-* HandlerThread：为某些回调方法或者等待某些执行任务设置一个专属的线程，并提供线程任务的调度机制。
-* ThreadPool：把任务分解成不同的单元，分发到各个不同的线程上，进行同时并发处理。
-* IntentService：适合执行由 UI 触发的后台任务。并可以把这些任务执行的情况进行一定的机制反馈给 UI。
-
-　　一般多线程的情况可以通过 Asynctask 处理，也可以使用 annotation。
-
-### 3.2. 网络优化
-
-　　网络优化的重点：时间、速度和成功率。
-
-#### 3.2.1. 图片优化
-
-1. 使用 WebP 格式。同样的图片，采用 WebP 格式可大幅节省流量，相对于 JPG 格式的图片，流量能节省将近 25% 到 35%；相对于 PNG 格式的图片，流量可以节省将近 80%。最重要的是使用 WebP 之后图片质量也没有改变。
-
-2. 使用缩略图。可以控制 inside 和 option，进行图片缩放。
-
-#### 3.2.2. 网络请求处理的优化
-
-1. 对服务器返回数据进行缓存，设定有效时间，有效时间之内不走网络请求，读取缓存显示，从而减少流量消耗。可以使用 HttpResponseCache 进行数据缓存。
-
-2. 尽量少使用 GPS 定位，如果条件允许，尽可能使用网络定位。
-
-3. 下载和上传尽可能使用断点。
-
-4. 刷新数据时，尽可能使用局部刷新，而不是全局刷新。第一、界面会闪屏一下，网差的时候界面可能会直接白屏一段时间；第二，节省流量。
+　　检查内存泄漏的工具：1. leakcanary；2.Memory Monitor；3. Android Lint。
 
 ## 4. 启动优化
-　　安卓应用的启动方式分为三种：冷启动、暖启动、热启动。不同的启动方式决定了应用 UI 对用户可见所需要花费的时间长短。冷启动消耗的时间最长，基于冷启动方式的优化工作也是最考验产品用户体验的地方。
+　　安卓应用的启动方式分为三种：冷启动（Cold start）、暖启动（Warm start）、热启动（Hot start）。不同的启动方式决定了应用 UI 对用户可见所需要花费的时间长短。冷启动消耗的时间最长，基于冷启动方式的优化工作也是最考验产品用户体验的地方。
 
 ### 4.1. 启动方式
 
 #### 4.1.1. 冷启动
 
-　　冷启动是在启动应用前，系统没有获取到当前 app 的 activity、Service 等等。例如第一次启动 app 或者杀死进程后第一次启动。那么对比其他两种当时，冷启动是耗时最长的。
+　　冷启动是指应用程序从头开始，系统没有获取到当前 app 的 activity、Service 等等。例如第一次启动 app 或者杀死进程后第一次启动。那么对比其他两种当时，冷启动是耗时最长的。
 
 　　应用发生冷启动时，系统一定会执行下面的三个任务：
 1. 开始加载并启动应用
 
 2. 应用启动后，显示一个空白的启动窗口（启动闪屏页）
 
-3. 创建应用信息
+3. 创建应用程序进程
 
-　　那么创建应用信息，系统需要做的事情：
+　　那么创建应用程序进程之后，开始创建应用程序对象：
 
-　3.1 application 的初始化
+4.  启动 UI 线程
+5.  创建主 Activity
+6.  加载布局
+7.  屏幕布局
+8.  执行初始化绘制
 
-　3.2 启动 UI 线程
-
-　3.3 导入视图（inflate view）
-
-​	3.4 计算视图大小（onmesure view）
-
-　3.5 得到视图排版（onlayout view）
-
-　3.6 绘制视图（ondraw view）
+　　应用程序进程完成第一次绘制后，系统进程会交换当前显示的背景窗口，将其替换为主活动。此时，用户可以开始使用该应用进程，至此启动完成。
 
 　　在冷启动过程中有两个 creation 工作，分别是 Application 和 Activity creation，它们均在 View 绘制展示之前。所以，在应用自定义的 Application 类和第一个 Activity 类中，onCreate() 方法做的事情越多，冷启动消耗的时间越长。
+
+##### 4.1.1.1. Application 创建
+
+　　当 Application 启动时，空白的启动窗口将保留在屏幕上，直到系统首次完成绘制应用程序。此时，系统进程会交换应用程序的启动窗口，允许用户开始与应用程序进行交互。（为什么程序启动时会出现一段时间的黑屏或白屏）。
+
+　　如果有自己的 Application，系统会调用 Application 对象的 onCreate() 方法，之后，应用程序会生成主线程（UI 线程），病通过创建主要活动来执行任务。
+
+##### 4.1.1.2 Activity 创建
+
+　　应用程序进程创建 Actiivty 后，Activity 将执行以下操作：
+
+1. 初始化值
+2. 调用构造函数
+3. 调用回调方法（例如 Activity.onCreate），对应 Activity 的当前生命周期状态。
+
+　　通常，onCreate() 方法对加载时间的影响最大，因为它以最高的开销执行工作：加载和渲染视图以及初始化 Activity 运行所需的对象。 
 
 #### 4.1.2. 暖启动
 
 　　当应用中的 Activities 被销毁，但在内存中常驻时，应用的启动方式就会变为暖启动。相比冷启动，暖启动过程减少了对象初始化、布局加载等工作，启动时间更短。但启动时，系统依然会展示闪屏页，直到第一个 Activity 的内容呈现为止。
 
+　　暖启动的场景有：
+
+1. 用户退出应用，但随后重新启动它。该过程可能已继续运行，但应用程序必须通过调用从头开始重新创建 Activity 的 onCreate()。
+2. 系统将您的应用程序从内存中逐出，然后用户重新启动它。需要重新启动进程和活动，但是在调用 onCreate() 的时候可以从 Bundle(savedInstanceState) 获取数据。
+
 #### 4.1.3. 热启动
 
-　　相比暖启动，热启动时应用做的工作更少，启动时间更短。产生热启动的场景有：用户使用返回键退出应用，然后马上又重新启动应用。
+　　相比暖启动，热启动时应用做的工作更少，启动时间更短。在一个热启动中，系统会把你的 Activity 带到前台，如果应用程序的 Activity 仍然驻留在内存中，那么引用程序可以避免重复对象初始化、布局加载和渲染。产生热启动的场景有：用户使用返回键退出应用，然后马上又重新启动应用。
+
+　　热启动和冷启动一样系统进程显示空白屏幕，直到应用程序完成呈现活动。
 
 ### 4.2. 如何优化
 
@@ -282,6 +304,52 @@
 2. Application 的创建过程中尽量少的进行耗时操作。
 
 3. 减少布局的层次，并且生命周期回调的方法中尽量减少耗时的操作。
+
+
+
+## 4. 网络优化
+
+　　可以通过 Memory 下面的 Net 进行网络的监听。
+
+### 4.1.线程优化
+
+　　大多数就是因为线程阻塞导致的 ANR。
+
+　　ANR：application not responding，应用程序无响应。
+
+　　ANR 出现的时机：
+
+1. activity 如果在 5s 内无响应事件（屏幕触摸事件或者键盘输入事件）；
+2. BroadcastReceiver 如果在 10s 内无法处理完成；
+3. Service 如果在 20s 内无法处理完成。
+
+　　Android 系统提供了一些工具类来解决此问题：
+
+* Asynctask：为 UI 线程与工作线程之间进行快速处理的切换提供一种简单边界的机制。适用于当下立即需要启动，但是异步执行的生命周期短暂的场景。
+* HandlerThread：为某些回调方法或者等待某些执行任务设置一个专属的线程，并提供线程任务的调度机制。
+* ThreadPool：把任务分解成不同的单元，分发到各个不同的线程上，进行同时并发处理。
+* IntentService：适合执行由 UI 触发的后台任务。并可以把这些任务执行的情况进行一定的机制反馈给 UI。
+
+　　一般多线程的情况可以通过 Asynctask 处理，也可以使用 annotation。
+
+### 4.2. 网络优化
+
+　　网络优化的重点：时间、速度和成功率。
+
+#### 4.2.1. 图片优化
+
+1. 使用 WebP 格式。同样的图片，采用 WebP 格式可大幅节省流量，相对于 JPG 格式的图片，流量能节省将近 25% 到 35%；相对于 PNG 格式的图片，流量可以节省将近 80%。最重要的是使用 WebP 之后图片质量也没有改变。
+
+2. 使用缩略图。可以控制 inside 和 option，进行图片缩放。
+
+#### 4.2.2. 网络请求处理的优化
+
+1. 对服务器返回数据进行缓存，设定有效时间，有效时间之内不走网络请求，读取缓存显示，从而减少流量消耗。可以使用 HttpResponseCache 进行数据缓存。
+2. 尽量少使用 GPS 定位，如果条件允许，尽可能使用网络定位。
+3. 下载和上传尽可能使用断点。
+4. 刷新数据时，尽可能使用局部刷新，而不是全局刷新。第一、界面会闪屏一下，网差的时候界面可能会直接白屏一段时间；第二，节省流量。
+
+
 
 ## 5. 电量优化
 
@@ -296,9 +364,9 @@
 
 * 后台任务要尽可能少的唤醒 CPU。
 
-## 6. 其他优化
+## 7. 其他优化
 
-### 6.1. 查看代码缺陷和无用资源
+### 7.1. 查看代码缺陷和无用资源
 
 　　Android Studio 有自带的代码检查工具。打开 Analyze -> Run Inspection by Name... -> unused resource 点击开始检测。
 
