--- a/Android/optimize/性能优化.md
+++ b/Android/optimize/性能优化.md
@@ -3,11 +3,13 @@
 　　性能优化有几个方面：
 
 1. 内存优化
-
 2. UI 优化（ 布局优化和绘制优化 ）
-3. 速度的优化（ 线程优化和网络优化 ）
-4. 电量优化
-5. 启动优化
+3. 内存优化
+4. 启动优化
+5. 网络优化
+6. 包体优化
+7. 电量优化
+8. 其他优化
 
 ## 1. 内存优化
 ### 1.1 内存泄漏
@@ -296,22 +298,21 @@
 
 ### 4.2. 如何优化
 
-　　可以在进入主页时添加闪屏页，倒计时显示闪屏页。在闪屏页显示的时候进行一些必要的加载，例如用户信息、定位等等。在倒计时结束后关闭闪屏页进入首页。
+1. 利用提前展示出来的 Window，快速展示出来一个界面。
 
-　　另外，在启动的 Application 和 首页 Activity 要减少耗时操作：
-1. 主线程中涉及到 Shareperference 能否在非 UI 线程执行。
+   使用 Activity 的 windowBackground 主题属性来为启动的 Activity 提供一个简单的 drawable。
 
-2. Application 的创建过程中尽量少的进行耗时操作。
+2. 避免在启动时坐密集沉重的初始化
 
-3. 减少布局的层次，并且生命周期回调的方法中尽量减少耗时的操作。
+   对于一些必须去初始化的，可以使用异步加载。一些初始化的情况：a.比如像友盟，bugly 这样的业务非必要的可以异步加载；b.比如地图、推送等，非第一时间需要的可以在主线程做延时启动。当程序以及启动起来之后，再进行初始化。c.对于图片、网络请求框架必须再主线程初始化。 
 
+3. 避免 I/O 操作、反序列化、网络操作、布局嵌套等
 
-
-## 4. 网络优化
+## 5. 网络优化
 
 　　可以通过 Memory 下面的 Net 进行网络的监听。
 
-### 4.1.线程优化
+### 5.1.线程优化
 
 　　大多数就是因为线程阻塞导致的 ANR。
 
@@ -332,17 +333,18 @@
 
 　　一般多线程的情况可以通过 Asynctask 处理，也可以使用 annotation。
 
-### 4.2. 网络优化
+### 5.2. 网络优化
 
 　　网络优化的重点：时间、速度和成功率。
 
-#### 4.2.1. 图片优化
+#### 5.2.1. 图片优化
+
+　　图片现在在应用中很常见，所以对图片优化也是对网络优化的一种方式。
 
 1. 使用 WebP 格式。同样的图片，采用 WebP 格式可大幅节省流量，相对于 JPG 格式的图片，流量能节省将近 25% 到 35%；相对于 PNG 格式的图片，流量可以节省将近 80%。最重要的是使用 WebP 之后图片质量也没有改变。
-
 2. 使用缩略图。可以控制 inside 和 option，进行图片缩放。
 
-#### 4.2.2. 网络请求处理的优化
+#### 5.2.2. 网络请求处理的优化
 
 1. 对服务器返回数据进行缓存，设定有效时间，有效时间之内不走网络请求，读取缓存显示，从而减少流量消耗。可以使用 HttpResponseCache 进行数据缓存。
 2. 尽量少使用 GPS 定位，如果条件允许，尽可能使用网络定位。
@@ -351,32 +353,164 @@
 
 
 
-## 5. 电量优化
+## 6. 包体优化
 
-### 5.1. 电量优化
+　　解压 APK 文件： 
 
-　　关于电量优化的建议：
-1. 需要进行网络请求时，首先判断网络当前的状态。
+![](image/apk包.png)
 
-2. 在多网络请求的情况下，最好进行批量处理，尽量避免频繁的间隔网络请求。
+　　**AndroidManifest.xml**：这个文件用来描述 Android 应用的配置信息，一些组件的注册信息、可使用权限等。
 
-3. 在同时有 wifi 和移动数据的情况下，应该直接屏蔽移动数据的网络请求，只有当 wifi 断开时再调用，因为 wifi 请求的耗电量远比移动数据的耗电量低的低。
+　　 **assets 文件夹**：存放一些配置文件、资源文件，assets 不会自动生成对应的 ID，而是通过 AssetManager 类的接口获取。
 
-* 后台任务要尽可能少的唤醒 CPU。
+　　**classes.dex**：Dalvik 字节码程序，让 Dalvik 虚拟机可执行，一般情况下，Android 应用在打包时通过 Android SDK 中的 dx 工具将 Java 字节码转换为 Dalvik 字节码。
 
-## 7. 其他优化
+　　**META-INF**：保存应用的签名信息，签名信息可以验证 APK 文件的完整性。
 
-### 7.1. 查看代码缺陷和无用资源
+　　**res 目录**：res 是 resource 的缩写，这个目录存放资源文件，会自动生成对应的 ID 并映射到 .R 文件中，访问直接使用资源 ID。
 
-　　Android Studio 有自带的代码检查工具。打开 Analyze -> Run Inspection by Name... -> unused resource 点击开始检测。
+　　**resources.arsc**：记录着资源文件和资源 ID 之间的映射关系，用来根据资源 ID 寻找资源。
 
-　　也可以将鼠标放在代码区点击右键 -> Analyze -> Inspect Code -> 界面选择你要检测的模块 ->点击确认开始检测。
+### 6.1. 包体优化的方式
+
+　　从代码和资源两个方面去减少 APK 的大小。
+
+1. 使用可绘制对象，某些图像不需要静态图片资源；框架可以在运行时动态绘制图像。Drawable 对象（< shape > 以 XML 格式）可以占用 APK 中的少量空间。此外，XML Drawbale 对象产生符合材料设计准则的单色图像。
+
+2. 可以使用自己用 XML 写 Drawable，就使用自己写的，这种图片占用空间会很小。
+
+3. 重用资源。可以使用旋转等方法去重用（比如三角按钮，三角朝上代表收起，三角朝下表示展开，就可以通过旋转重用一张图片）。
+
+   统一图像的着色不同，可以使用 android:tint（将图片渲染成指定的颜色） 和 tintMode 属性，低版本（5.0 以下）可以使用 ColorFilter（图片减半处理，可以修改图片每个像素的颜色）。
+
+4. 压缩 PNG 和 JPEG 文件。可以减少 PNG 文件的大小，而不会丢失图像质量。使用工具如 pngcrush、pngquant 或 zopfliping，这些工具都可以减少 PNG 文件的大小，同事保持感知的图像质量。
+
+5. 使用 WebP 文件格式。可以使用 Webp 文件格式，而不是使用 PNG 或 JPEG 文件。Webp 格式提供有损压缩（如 JPEG）以及透明度（如 PNG），但可以提供比 JPEG 、PNG 更好的压缩。
+
+   可以使用 Android Studio 将现有的 BMP、JPG、PNG 或静态 GIF 图像转换为 WebP 格式。
+
+6. 使用矢量图像。可以使用矢量图形来创建与分辨率无关的图标和其他可伸缩 Image。使用这些图像可以大大减少 APK 大小。一个 100 字节的文件可以生成与屏幕大小相关的清晰图像。
+
+   但是，系统渲染每个 VectorDrawable 对象需要花费大量时间，而较大的图像需要更长的时间才能显示在屏幕上。因此，仅在显示小图像时使用矢量图形。
+
+   不要把 AnimationDrawable 用于创建逐帧动画，因为这样做需要为动画的每个帧包含一个单独的位图文件，这会大大增加 APK 的大小。
+
+7. 代码混淆。使用 proGuard 代码混淆器工具，包括压缩、优化、混淆等功能。
+
+8. 插件化。比如功能模块放在服务器上，按需下载，可以减少安装包大小。
+
+
+
+### 6.2. 检查包体的工具
+
+1. lint 工具，没有使用过的资源就会打印信息
+
+```
+res/layout/preferences.xml: Warning: The resource R.layout.preferences appears
+    to be unused [UnusedResources]
+```
+
+　　开启资源压缩，就会自动删除无用的代码
+
+```
+android {
+    ...
+    buildTypes {
+        release {
+            shrinkResources true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'),
+                    'proguard-rules.pro'
+        }
+    }
+}
+```
+
+2. Android Studio 有自带的代码检查工具。打开 Analyze -> Run Inspection by Name... -> unused resource 点击开始检测。
+3. 也可以将鼠标放在代码区点击右键 -> Analyze -> Inspect Code -> 界面选择你要检测的模块 ->点击确认开始检测。
 
 　　上面的方法是最容易找到代码缺陷以及无用代码的地方。
 
+## 7. 电量优化
+
+　　Battery Historian 是由 Google 提供的 Android 系统电量分析工具，从手机中到处 bugreport 文件上传至页面，在网页中生成详细的图标数据来展示手机上各模块电量消耗过程，最后通过 App 数据的分析制定出相应的电量优化的方法。
+
+　　谷歌推荐使用 JobScheduler 来调整任务优先级等策略来达到降低损耗的目的。JobScheduler 可以避免频繁的唤醒硬件模块，造成不必要的电量消耗。避免在不合适的时间（例如低电量情况下、弱网络或者移动网络情况下）执行过多的任务从而消耗电量。
+
+### 7.1. 具体实践
+
+1. 可以退出非面向用户的任务（如定期数据库数据更新）；
+2. 当充电时才希望执行的工作（如备份数据）；
+3. 需要访问网络或 Wi-Fi 连接的任务（如向服务器拉取配置数据）；
+4. 零散任务合并到一个批次取定期运行；
+5. 当设备空闲时启动某些任务；
+6. 只有当条件得到满足，系统才会启动计划中的任务（充电、WIFI）。
+7. 需要进行网络请求时，首先判断网络当前的状态。
+8. 在同时有 wifi 和移动数据的情况下，应该直接屏蔽移动数据的网络请求，只有当 wifi 断开时再调用，因为 wifi 请求的耗电量远比移动数据的耗电量低的低。
+9. 后台任务要尽可能少的唤醒 CPU。
+
+### 7.2. 电量优化的法则
+
+　　谷歌对电量优化提出了一个懒惰第一的法则：
+
+　　**减少**：应用可以删除冗余操作吗？例如，是否可以缓存下载的数据而不是重复唤醒无线电以重新下载数据。
+
+　　**推迟**：应用是否需要立即执行操作？例如，可以等到设备充电时把数据备份到云端。
+
+　　**合并**：可以批处理工作，而不是多次将设备至于活动状态吗？例如，几十个应用程序是否真的有必要在不同实践打开收音机发送邮件，在依次唤醒收音机期间，是否可以传输消息。
+
+### 7.3. 电量优化的方法
+
+1. 使用 JobScheduler 调度任务。
+2. 使用懒惰法则。
+
+## 8. 其他优化
+
+### 8.1. ListView 优化
+
+1. 复用 `public View getView(int position, View convertView, ViewGroup parent)`的 convertView，不必每次创建新的 View。
+2. 使用 ViewHolder，减少每次初始化子 View。
+3. 分段、分页加载。
+
+### 8.2. Bitmap 优化
+
+　　Bitmap 优化就是压缩。
+
+　　三种压缩方式：
+
+1. 对图片质量进行压缩。
+2. 对图片尺寸进行压缩。
+3. 使用 libjpeg.so 库进行压缩。
+
+### 8.3. 线程有优化
+
+　　线程优化的思想是采用线程池，避免在程序中存在大量的 Thread。线程池可以重用内部的线程，从而避免了线程的创建和销毁所带来的性能开销，同时线程池还能有效地控制线程池地最大并发数，避免大量地线程因互相抢占系统资源从而导致阻塞线程发生。
+
+　　**线程池的优点**
+
+1. 减少在创建和销毁线程上所化的时间以及系统资源的开销。
+2. 如不使用线程池，有可能造成系统创建大量线程而导致消耗完系统内存以及 ” 过度切换 “。
+
+　　**注意**
+
+1. 如果线程池中的数量未达到核心线程的数量，则直接回启动一个核心线程来执行任务。
+2. 如果线程池中的数量已经达到或超过核心线程的数量，则任务会被插入到任务队列中等待执行。
+3. 如果 2 中的任务无法插入到任务队列中，犹豫任务队列已满，这时候如果线程数量未达到线程池规定最大值，则回启动一个非核心线程来执行任务。
+4. 如果 3 中线程数量已经达到线程池最大值，则会拒绝执行此任务，ThreadPoolExecutor 会调用 RejectedExecutionHandler 的 rejectedExecution 方法通知调用者。
+
+### 8.4. 高效代码
+
+　　编写高效代码的有个基本规则：1.不要做不需要做的工作；2.如果可以避免，请不要分配内存。
+
+1. 避免创建不必要的对象。
+2. 首选静态。如果不需要访问对象的字段，请使方法保持静态。调用毒素将提高约 15% - 20%。
+3. 对常量使用 static final，此优化仅适用于基本类型和 String 常量，而不适用于任意引用类型。
+4. 使用增加的 for 循环语句。增强 for 循环（for-each）可用于实现 Iterator 接口和数组的集合。
+5. 避免使用浮点数。根据经验，浮点数比 Android 设备上的整数慢约 2 倍。
 
 
-## 7. 参考文章
+
+## 9. 参考文章
 
 [Android 性能优化全方面解析](https://juejin.im/post/5a0d30e151882546d71ee49e)
 [Android 性能优化最佳实践](https://juejin.im/post/5b50b017f265da0f7b2f649c)
