--- a/BookNote/深入理解 Java 虚拟机/第11章-后端编译与优化.md
+++ b/BookNote/深入理解 Java 虚拟机/第11章-后端编译与优化.md
@@ -223,453 +223,165 @@
 
 　　编译器的目标虽然是做由程序代码翻译为本地机器码的工作，但其实难点并不在于能不能成功翻译出机器码，输出代码优化质量的高低才是决定编译器优秀与否的关键。
 
- 
+### 11.4.1 优化技术概览
 
- 
+　　OpenJDK 的官方 Wiki 上，HotSpot 虚拟机设计团队列出了一个相对比较全面的、即时编译器中采用的优化技术列表，如下表所示，其中有不少经典编译器的优化手段，也有许多针对 Java 语言，或者说针对运行在 Java 虚拟机上的所有语言进行的优化。
 
-11.4.1 优化技术概览
+![](image/即时编译器优化技术一览.jpeg)
 
- 
+![](image/即时编译器优化技术一览续.jpeg)
 
- 
+　　即时编译器对代码优化变换是建立在代码的中间表示或者是机器码之上的，绝不是直接在 Java 源码上去做的。
 
-OpenJDK的官方Wiki上，HotSpot虚拟机设计团队列出了一个相对比较全面的、即时编译器中采用的优化技术列表[插图]，如表11-1所示，其中有不少经典编译器的优化手段，也有许多针对Java语言，或者说针对运行在Java虚拟机上的所有语言进行的优化。
+### 11.4.2 方法内联
 
- 
+　　方法内联是编译器最重要的优化手段，甚至都可以不加上 “之一” 。内联被业内戏称为优化之母，因为除了消除方法调用的成本之外，它更重要的意义是为其他优化手段建立良好的基础。
 
- 
+　　方法内联的优化行为理解起来是没有任何困难的，不过就是把目标方法的代码原封不动地 “ 复制 ” 到发起调用的方法之中，避免发生真实的方法调用而已。但实际上 Java 虚拟机中的内联过程却远没有想象中容易，甚至如果不是即时编译器做了一些特殊的努力，按照经典编译原理的优化理论，大多数的 Java 方法都无法进行内联。
 
-即时编译器对这些代码优化变换是建立在代码的中间表示或者是机器码之上的，绝不是直接在Java源码上去做的，
+　　无法内联的原因：只有使用 invokespecial 指令调用的私有方法、实例构造器、父类方法和使用 invokestatic 指令调用的静态方法才会在编译期进行解析。除了上述四种方法之外（最多再除去被 final 修饰的方法这种特殊情况，尽管它使用 invokevirtual 指令调用，但也是非虚方法，《 Java 语言规范 》中明确说明了这点），其他的 Java 方法调用都必须在运行时进行方法接收者的多态选择，它们都有可能存在多于一个版本的方法接收者，简而言之，Java 语言中默认的实例方法是虚方法。
 
- 
+　　对于一个虚方法，编译器静态地去做内联的时候很难确定应该使用哪个方法版本。
 
- 
+　　由于 Java 提倡使用面向对象的方式进行编程，而 Java 对象的方法默认就是虚方法，可以说 Java 间接鼓励了程序员使用大量的虚方法来实现程序逻辑。
 
-11.4.2 方法内联
+　　内联与虚方法之间会产生 “ 矛盾 ”。为了解决虚方法的内联问题，Java 虚拟机首先引入了一种名为**类型继承关系分析**（ClassHierarchy Analysis，CHA）的技术，这是整个应用程序范围内的类型分析技术，用于确定在目前已加载的类中，某个接口是否有多于一种的实现、某个类是否存在子类、某个子类是否覆盖了父类的某个虚方法等信息。这样，编译器在进行内联时就会分不同情况采取不同的处理：如果是非虚方法，那么直接进行内联就可以了，这种的内联是有百分百安全保障的；如果遇到虚方法，则会向 CHA 查询此方法在当前程序状态下是否真的有多个目标版本可供选择，如果查询到只有一个版本，那就可以假设 “ 应用程序的全貌就是现在运行的这个样子 ” 来进行内联，这种内联被称为**守护内联**（Guarded Inlining）。
 
- 
+　　不过由于 Java 程序是动态连接的，说不准什么时候就会加载到新的类型从而改变 CHA 结论，因此这种内联属于**激进预测性优化**，必须预留好 “ 逃生门 ”，即当假设条件不成立时的 “ 退路 ”（Slow Path）。
 
- 
+　　假如在程序的后续执行过程中，虚拟机一直没有加载到会令这个方法的接收者的继承关系发生变化的类，那这个内联优化的代码就可以一直使用下去。如果加载了导致继承关系发生变化的新类，那么就必须抛弃已经编译的代码，退回到解释状态进行执行，或者重新进行编译。
 
-方法内联，说它是编译器最重要的优化手段，甚至都可以不加上“之一”。内联被业内戏称为优化之母，因为除了消除方法调用的成本之外，它更重要的意义是为其他优化手段建立良好的基础，
+　　假如向 CHA 查询出来的结果是该方法确实有多个版本的目标方法可供选择，那即时编译器还将进行最后一次努力，使用内联缓存（Inline Cache）的方式来缩减方法调用的开销。这种状态下方法调用是真正发生了的，但是比起直接查虚方法表还是要快一些。
 
- 
+　　 **内联缓存**是一个建立在目标方法正常入口之前的缓存，它的**工作原理**大致为：在未发生方法调用之前，内联缓存状态为空，当第一次调用发生后，缓存记录下方法接收者的版本信息，并且每次进行方法调用时都比较接收者的版本。如果以后进来的每次调用的方法接收者版本都是一样的，那么这时它就是一种单态内联缓存（Monomorphic Inline Cache）。
 
- 
+　　通过该缓存来调用，比用不内联的非虚方法调用，仅多了一次类型判断的开销而已。但如果真的出现方法接收者不一致的情况，就说明程序用到了虚方法的多态特性，这时候会退化成超多态内联缓存（Megamorphic Inline Cache），其开销相当于真正查找虚方法表来进行方法分派。
 
-方法内联的优化行为理解起来是没有任何困难的，不过就是把目标方法的代码原封不动地“复制”到发起调用的方法之中，避免发生真实的方法调用而已。但实际上Java虚拟机中的内联过程却远没有想象中容易，甚至如果不是即时编译器做了一些特殊的努力，按照经典编译原理的优化理论，大多数的Java方法都无法进行内联。
+　　所以说，在多数情况下 Java 虚拟机进行的方法内联都是一种激进优化。事实上，激进优化的应用在高性能的 Java 虚拟机中比比皆是，极为常见。除了方法内联之外，对于出现概率很小（通过经验数据或解释器收集到的性能监控信息确定概率大小）的隐式异常、使用概率很小的分支等都可以被激进优化 “移除”，如果真的出现了小概率事件，这时才会从 “逃生门” 回到解释状态重新执行。
 
- 
+### 11.4.3 逃逸分析
 
- 
+　　逃逸分析（Escape Analysis）是目前 Java 虚拟机中比较前沿的优化技术，它与类型继承关系分析一样，并不是直接优化代码的手段，而是为其他优化措施提供依据的分析技术。
 
-无法内联的原因
+　　逃逸分析的**基本原理**是：分析对象动态作用域，当一个对象在方法里面被定义后，它可能被外部方法所引用，例如作为调用参数传递到其他方法中，这种称为**方法逃逸**；甚至还有可能被外部线程访问到，譬如赋值给可以在其他线程中访问的实例变量，这种称为**线程逃逸**；从不逃逸、方法逃逸到线程逃逸，称为对象由低到高的不同逃逸程度。
 
- 
+　　如果能证明一个对象不会逃逸到方法或线程之外（换句话说是别的方法或线程无法通过任何途径访问到这个对象），或者逃逸程度比较低（只逃逸出方法而不会逃逸出线程），则可能为这个对象实例采取不同程度的优化，如：
 
- 
+* 栈上分配（Stack Allocations）
 
-只有使用invokespecial指令调用的私有方法、实例构造器、父类方法和使用invokestatic指令调用的静态方法才会在编译期进行解析。除了上述四种方法之外（最多再除去被final修饰的方法这种特殊情况，尽管它使用invokevirtual指令调用，但也是非虚方法，《Java语言规范》中明确说明了这点），其他的Java方法调用都必须在运行时进行方法接收者的多态选择，它们都有可能存在多于一个版本的方法接收者，简而言之，Java语言中默认的实例方法是虚方法。
+  在 Java 虚拟机中，Java 堆上分配创建对象的内存空间。
 
- 
+  Java 堆中的对象对于各个线程都是共享和可见的，只要持有这个对象的引用，就可以访问到堆中存储的对象数据。
 
- 
+  虚拟机的垃圾收集子系统会回收堆中不再使用的对象，但回收动作无论是标记筛选出可回收对象，还是回收和整理内存，都需要耗费大量资源。
 
-对于一个虚方法，编译器静态地去做内联的时候很难确定应该使用哪个方法版本
+  如果确定一个对象不会逃逸出线程之外，那让这个对象在栈上分配内存将会是一个很不错的主意，对象所占用的内存空间就可以随栈帧出栈而销毁。
 
- 
+  在一般应用中，完全不会逃逸的局部对象和不会逃逸出线程的对象所占的比例是很大的，如果能使用栈上分配，那大量的对象就会随着方法的结束而自动销毁了，垃圾收集子系统的压力将会下降很多。
 
- 
+  栈上分配可以支持方法逃逸，但不能支持线程逃逸。
 
-由于Java提倡使用面向对象的方式进行编程，而Java对象的方法默认就是虚方法，可以说Java间接鼓励了程序员使用大量的虚方法来实现程序逻辑。
+* 标量替换（Scalar Replacement）
 
- 
+  若一个数据已经无法再分解成更小的数据来表示了，Java 虚拟机中的原始数据类型（int、long 等数值类型及 reference 类型等）都不能再进一步分解了，那么这些数据就可以被称为**标量**。
 
- 
+  相对的，如果一个数据可以继续分解，那它就被称为**聚合量**（Aggregate），Java 中的对象就是典型的聚合量。
 
-内联与虚方法之间会产生“矛盾”
+  如果把一个 Java 对象拆散，根据程序访问的情况，将其用到的成员变量恢复为原始类型来访问，这个过程就称为**标量替换**。
 
- 
+  假如逃逸分析能够证明一个对象不会被方法外部访问，并且这个对象可以被拆散，那么程序真正执行的时候将可能不去创建这个对象，而改为直接创建它的若干个被这个方法使用的成员变量来代替。
 
- 
+  将对象拆分后，除了可以让对象的成员变量在栈上（栈上存储的数据，很大机会被虚拟机分配至物理机器的高速寄存器中存储）分配和读写之外，还可以为后续进一步的优化手段创建条件。
 
-为了解决虚方法的内联问题，Java虚拟机首先引入了一种名为类型继承关系分析（ClassHierarchy Analysis，CHA）的技术，这是整个应用程序范围内的类型分析技术，用于确定在目前已加载的类中，某个接口是否有多于一种的实现、某个类是否存在子类、某个子类是否覆盖了父类的某个虚方法等信息。这样，编译器在进行内联时就会分不同情况采取不同的处理：如果是非虚方法，那么直接进行内联就可以了，这种的内联是有百分百安全保障的；如果遇到虚方法，则会向CHA查询此方法在当前程序状态下是否真的有多个目标版本可供选择，如果查询到只有一个版本，那就可以假设“应用程序的全貌就是现在运行的这个样子”来进行内联，这种内联被称为守护内联（Guarded Inlining）
+  标量替换可以视作栈上分配的一种特例，实现更简单（不用考虑整个对象完整结构的分配），但对逃逸程度的要求更高，它不允许对象逃逸出方法范围内。
 
- 
+* 同步消除（Synchronization Elimination）
 
- 
+  线程同步本身是一个相对耗时的过程，如果逃逸分析能够确定一个变量不会逃逸出线程，无法被其他线程访问，那么这个变量的读写肯定就不会有竞争，对这个变量实施的同步措施也就可以安全地消除掉。
 
-不过由于Java程序是动态连接的，说不准什么时候就会加载到新的类型从而改变CHA结论，因此这种内联属于激进预测性优化，必须预留好“逃生门”，即当假设条件不成立时的“退路”（Slow Path）
+　　逃逸分析**不成熟的原因**主要是逃逸分析的计算成本非常高，甚至不能保证逃逸分析带来的性能收益会高于它的消耗。
 
- 
+　　如果要百分之百准确地判断一个对象是否会逃逸，需要进行一系列复杂的数据流敏感的过程间分析，才能确定程序各个分支执行时对此对象的影响。
 
- 
+　　过程间分析这种大压力的分析算法正是即时编译的弱项。
 
-假如在程序的后续执行过程中，虚拟机一直没有加载到会令这个方法的接收者的继承关系发生变化的类，那这个内联优化的代码就可以一直使用下去。如果加载了导致继承关系发生变化的新类，那么就必须抛弃已经编译的代码，退回到解释状态进行执行，或者重新进行编译。
+　　在现在仍处于实验阶段的 Valhalla 项目里，设计了新的 inline 关键字用于定义 Java 的内联类型，目的是实现与 C# 中值类型相对标的功能。有了这个标识与约束，以后逃逸分析做起来就会简单很多。
 
- 
+　　如果有需要，或者确认对程序运行有益，用户也可以使用参数 -XX：+DoEscapeAnalysis 来手动开启逃逸分析，开启之后可以通过参数 -XX：+PrintEscapeAnalysis 来查看分析结果。有了逃逸分析支持之后，用户可以使用参数 -XX：+EliminateAllocations 来开启标量替换，使用 +XX：+EliminateLocks 来开启同步消除，使用参数 -XX：+PrintEliminateAllocations 查看标量的替换情况。
 
- 
+### 11.4.4 公共子表达式消除
 
-假如向CHA查询出来的结果是该方法确实有多个版本的目标方法可供选择，那即时编译器还将进行最后一次努力，使用内联缓存（Inline Cache）的方式来缩减方法调用的开销。这种状态下方法调用是真正发生了的，但是比起直接查虚方法表还是要快一些
+　　公共子表达式消除是一项非常经典的、普遍应用于各种编译器的优化技术，它的含义是：如果一个表达式 E 之前已经被计算过了，并且从先前的计算到现在 E 中所有变量的值都没有发生变化，那么 E 的这次出现就称为**公共子表达式**。
 
- 
+　　对于这种表达式，没有必要花时间再对它重新进行计算，只需要直接用前面计算过的表达式结果代替 E 。
 
- 
+　　如果这种优化仅限于程序基本块内，便可称为**局部公共子表达式消除**（Local Common Subexpression Elimination），如果这种优化的范围涵盖了多个基本块，那就称为**全局公共子表达式消除**（Global Common SubexpressionElimination）。
 
-内联缓存是一个建立在目标方法正常入口之前的缓存，它的工作原理大致为：在未发生方法调用之前，内联缓存状态为空，当第一次调用发生后，缓存记录下方法接收者的版本信息，并且每次进行方法调用时都比较接收者的版本。如果以后进来的每次调用的方法接收者版本都是一样的，那么这时它就是一种单态内联缓存（Monomorphic Inline Cache）
+### 11.4.5 数组边界检查消除
 
- 
+　　数组边界检查消除（Array Bounds Checking Elimination）是即时编译器中的一项语言相关的经典优化技术。
 
- 
+　　对于虚拟机的执行子系统来说，每次数组元素的读写都带有一次隐含的条件判定操作，对于拥有大量数组访问的程序代码，这必定是一种性能负担。
 
-通过该缓存来调用，比用不内联的非虚方法调用，仅多了一次类型判断的开销而已。但如果真的出现方法接收者不一致的情况，就说明程序用到了虚方法的多态特性，这时候会退化成超多态内联缓存（Megamorphic Inline Cache），其开销相当于真正查找虚方法表来进行方法分派。
+　　如果编译器只要通过数据流分析就可以判定循环变量的取值返回永远在区间 [0,fo.length] 之内，那么在循环中就可以把整个数组的上下界检查消除掉，这可以节省很多次的条件判断操作。
 
- 
+　　与语言相关的其他消除操作还有不少，如自动装箱消除（Autobox Elimination）、安全点消除（Safepoint Elimination）、消除反射（Dereflection）等。
 
- 
+## 11.5 实战：深入理解Graal编译器
 
-所以说，在多数情况下Java虚拟机进行的方法内联都是一种激进优化。事实上，激进优化的应用在高性能的Java虚拟机中比比皆是，极为常见。除了方法内联之外，对于出现概率很小（通过经验数据或解释器收集到的性能监控信息确定概率大小）的隐式异常、使用概率很小的分支等都可以被激进优化“移除”，如果真的出现了小概率事件，这时才会从“逃生门”回到解释状态重新执行。
+### 11.5.1 历史背景
 
- 
+　　Graal 编译器在 JDK 9 时以 Jaotc 提前编译工具的形式首次加入到官方的 JDK 中，从 JDK 10 起，Graal 编译器可以替换服务端编译器，成为 HotSpot 分层编译中最顶层的即时编译器。这种可替换的即时编译器架构的实现，得益于 HotSpot 编译器接口的出现。
 
- 
+　　JDK 9 时发布的 JEP 243：Java 虚拟机编译器接口（Java-Level JVMCompiler Interface，JVMCI）使得 Graal 可以从 HotSpot 的代码中分离出来。
 
-11.4.3 逃逸分析
+　　JVMCI 主要提供如下三种功能：
 
- 
+* 响应 HotSpot 的编译请求，并将该请求分发给 Java 实现的即时编译器。
+* 允许编译器访问 HotSpot 中与即时编译相关的数据结构，包括类、字段、方法及其性能监控数据等，并提供了一组这些数据结构在 Java 语言层面的抽象表示。
+* 提供 HotSpot 代码缓存（Code Cache）的 Java 端抽象表示，允许编译器部署编译完成的二进制机器码。
 
- 
+　　综合利用上述三项功能，就可以把一个在 HotSpot 虚拟机外部的、用 Java 语言实现的即时编译器（不局限于 Graal ）集成到 HotSpot 中，响应 HotSpot 发出的最顶层的编译请求，并将编译后的二进制代码部署到 HotSpot 的代码缓存中。此外，单独使用上述第三项功能，又可以绕开 HotSpot 的即时编译系统，让该编译器直接为应用的类库编译出二进制机器码，将该编译器当作一个提前编译器去使用（如 Jaotc）。
 
-逃逸分析（Escape Analysis）是目前Java虚拟机中比较前沿的优化技术，它与类型继承关系分析一样，并不是直接优化代码的手段，而是为其他优化措施提供依据的分析技术。
+### 11.5.2 构建编译调试环境
 
- 
+　　由于 Graal 编译器要同时支持 Graal VM 下的各种子项目，如 Truffle、Substrate VM、Sulong 等，还要支持作为 HotSpot 和 Maxine 虚拟机的即时编译器，所以只用 Maven 或 Gradle 的话，配置管理过程会相当复杂。为了降低代码管理、依赖项管理、编译和测试等环节的复杂度，Graal 团队专门用 Python 2 写了一个名为 mx 的小工具来自动化做好这些事情。
 
- 
+　　当只关注 Graal 编译器在 HotSpot 上的应用而不想涉及 Graal VM 其他方面时，可直接采用 JDK 9 及之后的标准 Open/OracleJDK 。
 
-逃逸分析的基本原理是：分析对象动态作用域，当一个对象在方法里面被定义后，它可能被外部方法所引用，例如作为调用参数传递到其他方法中，这种称为方法逃逸；甚至还有可能被外部线程访问到，譬如赋值给可以在其他线程中访问的实例变量，这种称为线程逃逸；从不逃逸、方法逃逸到线程逃逸，称为对象由低到高的不同逃逸程度。
+### 11.5.3 JVMCI 编译器接口
 
- 
+　　即时编译器的输入是要编译的方法的字节码。既然叫字节码，顾名思义它就应该是 “ 用一个字节数组表示的代码 ”。即时编译器应该输出与方法对应的二进制机器码，二进制机器码也应该是 “ 用一个字节数组表示的代码 ”。
 
- 
+　　-XX：-TieredCompilation 关闭分层编译。
 
-如果能证明一个对象不会逃逸到方法或线程之外（换句话说是别的方法或线程无法通过任何途径访问到这个对象），或者逃逸程度比较低（只逃逸出方法而不会逃逸出线程），则可能为这个对象实例采取不同程度的优化，如：
+　　使用参数 -XX：+EnableJVMCI、-XX：+UseJVMCICompiler 来启用 JVMCI 接口和 JVMCI 编译器。
 
- 
+　　如何让 HotSpot 找到 Graal 编译器的位置呢？如果采用特殊版的 JDK 8，那虚拟机将会自动去查找 JAVA_HOME/jre/lib/jvmci 目录。假如这个目录不存在，那就会从 -Djvmci.class.path.append 参数中搜索。它查找的目标，即 Graal 编译器的 JAR 包。
 
- 
+### 11.5.4 代码中间表示
 
-栈上分配[插图]（Stack Allocations）：在Java虚拟机中，Java堆上分配创建对象的内存空间
+　　Graal 编译器在设计之初就刻意采用了与 HotSpot 服务端编译器一致（略有差异但已经非常接近）的中间表示形式，也即是被称为 Sea-of-Nodes 的中间表示，或者与其等价的被称为**理想图**（Ideal Graph，在代码中称为Structured Graph）的程序依赖图（Program DependenceGraph，PDG）形式。
 
- 
+　　理想图是一种有向图，用节点来表示程序中的元素，譬如变量、操作符、方法、字段等，而用边来表示数据或者控制流。
 
- 
+### 11.5.5 代码优化与生成
 
-Java堆中的对象对于各个线程都是共享和可见的，只要持有这个对象的引用，就可以访问到堆中存储的对象数据
+　　理想图本身的数据结构，它是一组不为空的节点的集合，它的节点都是用 ValueNode 的不同类型的子类节点来表示的。
 
- 
+　　每一个理想图的节点都有两个共同的主要操作，一个是规范化（Canonicalisation），另一个是生成机器码（Generation）。
 
- 
+　　规范化则是指如何缩减理想图的规模，也即在理想图的基础上优化代码所要采取的措施。这两个操作对应了编译器两项最根本的任务：代码优化与代码翻译。
 
-虚拟机的垃圾收集子系统会回收堆中不再使用的对象，但回收动作无论是标记筛选出可回收对象，还是回收和整理内存，都需要耗费大量资源
+　　至于代码生成，Graal 并不是直接由理想图转换到机器码，而是和其他编译器一样，会先生成低级中间表示（LIR，与具体机器指令集相关的中间表示），然后再由 HotSpot 统一后端来产生机器码。
 
- 
+　　现在 Graal 编译器也就只能支持这几种目标平台：SPARC、x86-AMD64、ARMv8-AArch64。
 
- 
+　　Graal 编译器的出现对学习和研究虚拟机代码编译技术实在有着不可估量的价值。
 
-如果确定一个对象不会逃逸出线程之外，那让这个对象在栈上分配内存将会是一个很不错的主意，对象所占用的内存空间就可以随栈帧出栈而销毁
+## 11.6 本章小结
 
- 
-
- 
-
-在一般应用中，完全不会逃逸的局部对象和不会逃逸出线程的对象所占的比例是很大的，如果能使用栈上分配，那大量的对象就会随着方法的结束而自动销毁了，垃圾收集子系统的压力将会下降很多
-
- 
-
- 
-
-栈上分配可以支持方法逃逸，但不能支持线程逃逸。
-
- 
-
- 
-
-·标量替换（Scalar Replacement）：若一个数据已经无法再分解成更小的数据来表示了，Java虚拟机中的原始数据类型（int、long等数值类型及reference类型等）都不能再进一步分解了，那么这些数据就可以被称为标量
-
- 
-
- 
-
-相对的，如果一个数据可以继续分解，那它就被称为聚合量（Aggregate），Java中的对象就是典型的聚合量
-
- 
-
- 
-
-如果把一个Java对象拆散，根据程序访问的情况，将其用到的成员变量恢复为原始类型来访问，这个过程就称为标量替换
-
- 
-
- 
-
-假如逃逸分析能够证明一个对象不会被方法外部访问，并且这个对象可以被拆散，那么程序真正执行的时候将可能不去创建这个对象，而改为直接创建它的若干个被这个方法使用的成员变量来代替
-
-微信读书
-
-深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）
-
-周志明
-
-41个笔记
-
-11.4 编译器优化技术
-
- 
-
-将对象拆分后，除了可以让对象的成员变量在栈上（栈上存储的数据，很大机会被虚拟机分配至物理机器的高速寄存器中存储）分配和读写之外，还可以为后续进一步的优化手段创建条件
-
- 
-
- 
-
-标量替换可以视作栈上分配的一种特例，实现更简单（不用考虑整个对象完整结构的分配），但对逃逸程度的要求更高，它不允许对象逃逸出方法范围内。
-
- 
-
- 
-
-·同步消除（Synchronization Elimination）：线程同步本身是一个相对耗时的过程，如果逃逸分析能够确定一个变量不会逃逸出线程，无法被其他线程访问，那么这个变量的读写肯定就不会有竞争，对这个变量实施的同步措施也就可以安全地消除掉。
-
- 
-
- 
-
-不成熟的原因主要是逃逸分析的计算成本非常高，甚至不能保证逃逸分析带来的性能收益会高于它的消耗
-
- 
-
- 
-
-如果要百分之百准确地判断一个对象是否会逃逸，需要进行一系列复杂的数据流敏感的过程间分析，才能确定程序各个分支执行时对此对象的影响。
-
- 
-
- 
-
-过程间分析这种大压力的分析算法正是即时编译的弱项
-
- 
-
- 
-
-在现在仍处于实验阶段的Valhalla项目里，设计了新的inline关键字用于定义Java的内联类型，目的是实现与C#中值类型相对标的功能。有了这个标识与约束，以后逃逸分析做起来就会简单很多。
-
- 
-
- 
-
-如果有需要，或者确认对程序运行有益，用户也可以使用参数-XX：+DoEscapeAnalysis来手动开启逃逸分析，开启之后可以通过参数-XX：+PrintEscapeAnalysis来查看分析结果。有了逃逸分析支持之后，用户可以使用参数-XX：+EliminateAllocations来开启标量替换，使用+XX：+EliminateLocks来开启同步消除，使用参数-XX：+PrintEliminateAllocations查看标量的替换情况。
-
- 
-
- 
-
-11.4.4 公共子表达式消除
-
- 
-
- 
-
-公共子表达式消除是一项非常经典的、普遍应用于各种编译器的优化技术，它的含义是：如果一个表达式E之前已经被计算过了，并且从先前的计算到现在E中所有变量的值都没有发生变化，那么E的这次出现就称为公共子表达式
-
- 
-
- 
-
-对于这种表达式，没有必要花时间再对它重新进行计算，只需要直接用前面计算过的表达式结果代替E
-
- 
-
- 
-
-如果这种优化仅限于程序基本块内，便可称为局部公共子表达式消除（Local Common Subexpression Elimination），如果这种优化的范围涵盖了多个基本块，那就称为全局公共子表达式消除（Global Common SubexpressionElimination）。
-
- 
-
- 
-
-11.4.5 数组边界检查消除
-
- 
-
- 
-
-数组边界检查消除（Array Bounds Checking Elimination）是即时编译器中的一项语言相关的经典优化技术。
-
- 
-
- 
-
-对于虚拟机的执行子系统来说，每次数组元素的读写都带有一次隐含的条件判定操作，对于拥有大量数组访问的程序代码，这必定是一种性能负担。
-
- 
-
- 
-
-与语言相关的其他消除操作还有不少，如自动装箱消除（Autobox Elimination）、安全点消除（Safepoint Elimination）、消除反射（Dereflection）等
-
-11.5 实战：深入理解Graal编译器
-
- 
-
-11.5.1 历史背景
-
- 
-
- 
-
-Graal编译器在JDK 9时以Jaotc提前编译工具的形式首次加入到官方的JDK中，从JDK 10起，Graal编译器可以替换服务端编译器，成为HotSpot分层编译中最顶层的即时编译器。这种可替换的即时编译器架构的实现，得益于HotSpot编译器接口的出现。
-
- 
-
- 
-
-JDK 9时发布的JEP 243：Java虚拟机编译器接口（Java-Level JVMCompiler Interface，JVMCI）使得Graal可以从HotSpot的代码中分离出来。JVMCI主要提供如下三种功能：·响应HotSpot的编译请求，并将该请求分发给Java实现的即时编译器。·允许编译器访问HotSpot中与即时编译相关的数据结构，包括类、字段、方法及其性能监控数据等，并提供了一组这些数据结构在Java语言层面的抽象表示。·提供HotSpot代码缓存（Code Cache）的Java端抽象表示，允许编译器部署编译完成的二进制机器码。
-
- 
-
- 
-
-综合利用上述三项功能，我们就可以把一个在HotSpot虚拟机外部的、用Java语言实现的即时编译器（不局限于Graal）集成到HotSpot中，响应HotSpot发出的最顶层的编译请求，并将编译后的二进制代码部署到HotSpot的代码缓存中。此外，单独使用上述第三项功能，又可以绕开HotSpot的即时编译系统，让该编译器直接为应用的类库编译出二进制机器码，将该编译器当作一个提前编译器去使用（如Jaotc）。
-
- 
-
- 
-
-11.5.2 构建编译调试环境
-
- 
-
- 
-
-由于Graal编译器要同时支持Graal VM下的各种子项目，如Truffle、Substrate VM、Sulong等，还要支持作为HotSpot和Maxine虚拟机的即时编译器，所以只用Maven或Gradle的话，配置管理过程会相当复杂。为了降低代码管理、依赖项管理、编译和测试等环节的复杂度，Graal团队专门用Python 2写了一个名为mx的小工具来自动化做好这些事情。
-
- 
-
- 
-
-当读者只关注Graal编译器在HotSpot上的应用而不想涉及Graal VM其他方面时，可直接采用JDK 9及之后的标准Open/OracleJDK
-
- 
-
- 
-
-11.5.3 JVMCI编译器接口
-
- 
-
- 
-
-即时编译器的输入是什么。答案当然是要编译的方法的字节码。既然叫字节码，顾名思义它就应该是“用一个字节数组表示的代码”。那接下来它输出什么？这也很简单，即时编译器应该输出与方法对应的二进制机器码，二进制机器码也应该是“用一个字节数组表示的代码”。
-
- 
-
- 
-
--XX：-TieredCompilation关闭分层编译
-
- 
-
- 
-
-使用参数-XX：+EnableJVMCI、-XX：+UseJVMCICompiler来启用JVMCI接口和JVMCI编译器
-
- 
-
- 
-
-如何让HotSpot找到Graal编译器的位置呢？
-
- 
-
- 
-
-如果采用特殊版的JDK 8，那虚拟机将会自动去查找JAVA_HOME/jre/lib/jvmci目录。假如这个目录不存在，那就会从-Djvmci.class.path.append参数中搜索。它查找的目标，即Graal编译器的JAR包
-
- 
-
- 
-
-11.5.4 代码中间表示
-
- 
-
- 
-
-Graal编译器在设计之初就刻意采用了与HotSpot服务端编译器一致（略有差异但已经非常接近）的中间表示形式，也即是被称为Sea-of-Nodes的中间表示，或者与其等价的被称为理想图（Ideal Graph，在代码中称为Structured Graph）的程序依赖图（Program DependenceGraph，PDG）形式。
-
- 
-
- 
-
-理想图是一种有向图，用节点来表示程序中的元素，譬如变量、操作符、方法、字段等，而用边来表示数据或者控制流。
-
- 
-
- 
-
-11.5.5 代码优化与生成
-
- 
-
- 
-
-理想图本身的数据结构。它是一组不为空的节点的集合，它的节点都是用ValueNode的不同类型的子类节点来表示的
-
- 
-
- 
-
-每一个理想图的节点都有两个共同的主要操作，一个是规范化（Canonicalisation），另一个是生成机器码（Generation）。
-
- 
-
- 
-
-规范化则是指如何缩减理想图的规模，也即在理想图的基础上优化代码所要采取的措施。这两个操作对应了编译器两项最根本的任务：代码优化与代码翻译。
-
- 
-
- 
-
-至于代码生成，Graal并不是直接由理想图转换到机器码，而是和其他编译器一样，会先生成低级中间表示（LIR，与具体机器指令集相关的中间表示），然后再由HotSpot统一后端来产生机器码。
-
- 
-
- 
-
-SPARC、x86-AMD64、ARMv8-AArch64
-
- 
-
- 
-
-现在Graal编译器也就只能支持这几种目标平台
-
- 
-
- 
-
-Graal编译器的出现对学习和研究虚拟机代码编译技术实在有着不可估量的价值。
-
-11.6 本章小结
-
- 
-
-在本章中，我们学习了与提前编译和即时编译器两大后端编译器相关的知识，了解了提前编译器重新兴起的原因及其优劣势；还有与即时编译器相关的热点探测方法、编译触发条件及如何从虚拟机外部观察和分析即时编译的数据和结果；还选择了几种常见的编译器优化技术进行讲解，对Java编译器的深入了解，有助于在工作中分辨哪些代码是编译器可以帮我们处理的，哪些代码需要自己调节以便更适合编译器的优化。
-
-微信读书
+　　在本章中，学习了与提前编译和即时编译器两大后端编译器相关的知识，了解了提前编译器重新兴起的原因及其优劣势；还有与即时编译器相关的热点探测方法、编译触发条件及如何从虚拟机外部观察和分析即时编译的数据和结果；还选择了几种常见的编译器优化技术进行讲解，对 Java 编译器的深入了解，有助于在工作中分辨哪些代码是编译器可以帮我们处理的，哪些代码需要自己调节以便更适合编译器的优化。
 
 
 
