--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -41,7 +41,13 @@
 
 ### 书籍阅读
 
-1. 《好的婚姻，要守护财产和爱》
+1. 《好的婚姻，要守护财产和爱》2020年1月
+
+### 影视
+
+1. 《爱情公寓》 2020年2月
+2. 《两只老虎》 2020年2月
+3. 《红星救援》2020年2月
 
 
 
@@ -58,13 +64,58 @@
 
 ### 2020 年 2 月
 
-1. 《深入理解 Java 虚拟机》 第 4 - 8 章
-2. 锻炼 天
-3. 
+1. 《深入理解 Java 虚拟机》 第 4 - 9 章
+3. 学习 RabbitMQ 知识
+3. 锻炼 天
+
+### 2020 年 3 月
+
+1. implementation 与 api 的区别
+2. jar 与 aar 的区别
+3. 《深入理解 Java 虚拟机》第 10-13  章
+4. RabbitMQ 知识整理
+5. Replugin 插件化
+6. fragment
+7. 锻炼 天
 
 
 
+#### 盘点需要做的事情（详细）
 
-
-
+1. Android
+   * ContentProvider
+   * Handle、Message、Looper
+   * Binder
+   * Intent
+   * Fragment
+   * SurfaceView 
+2. 开源库
+   * Glide
+   * OkHTTP
+   * Retrofit 源码分析
+   * RxJava
+   * XWalkView
+   * LRUCache
+   * **RabbitMQ - 进行中**
+   * RePlugin - 插件化
+   * 热修复
+3. 网络
+   * 计算机网络知识基础
+   * HTTPS
+   * TCP与UDP
+   * Socket
+4. Java
+   * 线程
+   * volatile - 数据从主内存直接获取
+   * threadLocal原理
+   * synchronized - 同步
+   * hashCode
+   * arrayMap
+   * treeMap
+5. 数据结构
+   * 链表与队列
+   * 树
+   * 哈希表
+   * 排序算法
+   * 查找算法
 
